--- a/client/templates/jobs/RedHood.jade
+++ b/client/templates/jobs/RedHood.jade
@@ -1,6 +1,6 @@
 section.jobmanual
   h1 小红帽
-  //- @MrAlludeが考案したとされる役職。
+  //- @MrAlludeが考案したとされる职业。
   p 村人侧。
   h2 特殊能力
   p 被人狼袭击死亡之后，那个人狼将会死去，小红帽自己将会复活。
