--- a/client/templates/jobs/Sorcerer.jade
+++ b/client/templates/jobs/Sorcerer.jade
@@ -1,6 +1,6 @@
 section.jobmanual
   h1 妖术师
-  p 「究极人狼」中登场的角色。人狼側。
+  p 「究极人狼」中登场的角色。人狼侧。
   h2 特殊能力
   p 毎晩选择一个村人进行调查，判断这个人是不是占卜师。
   p 与狂人相同，妖术师和人狼互相无法辨认。
