--- a/manual/play-game.jade
+++ b/manual/play-game.jade
@@ -1,21 +1,21 @@
 section.manual
   p: a(href="/play") 戻る
-  h1 ゲーム中の流れ
-  p ゲーム中の操作を説明します。
-  p 月下人狼では、ゲーム中は基本的には<strong>手動の更新は不要</strong>です。他の人の发言などはリアルタイムで表示され、昼や夜の切り替わりも全員同時です。
-  p ゲームは一日目の夜から始まり、その後昼と夜を交互に繰り返します。
+  h1 游戏中の流れ
+  p 游戏中の操作を説明します。
+  p 月下人狼では、游戏中は基本的には<strong>手動の更新は不要</strong>です。他の人の发言などはリアルタイムで表示され、昼や夜の切り替わりも全员同時です。
+  p 游戏は一日目の夜から始まり、その後昼と夜を交互に繰り返します。
 
   h2 昼
-  p 昼には話し合いをして、処刑投票を行います。処刑投票は話し合い中でもいつでも行えますが、<strong>一度投票すると変えられない</strong>ので注意して下さい。話し合いがまとまってからのほうがよいでしょう。
+  p 昼には話し合いをして、处刑投票を行います。处刑投票は話し合い中でもいつでも行えますが、<strong>一度投票すると変えられない</strong>ので注意して下さい。話し合いがまとまってからのほうがよいでしょう。
   p
     img(src="/images/manual-play-game-1.png",alt="昼の投票・发言フォーム")
-  p 昼は发言フォームが上の画像のようになります。上部に処刑投票用フォームが表示されています。投票するときは投票先を選択して「投票する」ボタンを押してください。
+  p 昼は发言フォームが上の画像のようになります。上部に处刑投票用フォームが表示されています。投票するときは投票先を選択して「投票する」ボタンを押してください。
   p その下は发言フォームです。これは夜にもあります。
   p 「普通」となっているセレクトボックスは「小さく」「普通」「大きく」があり、文字の大きさを選べます。注目を集めたかったり重要なことを言うときは大きくするなどして下さい。
-  p その横の「向全员发言」は、发言の種類を指定します。昼の場合は、全員に向けて发言する「向全员发言」と、自分しか見えない「自言自语」があります。自言自语も人狼が终了したあとは見えるので、自分の本心を書いておいたりするとあとでみた人が楽しめるかもしれません。
+  p その横の「向全员发言」は、发言の種類を指定します。昼の場合は、全员に向けて发言する「向全员发言」と、自己しか見えない「自言自语」があります。自言自语も人狼が终了したあとは見えるので、自己の本心を書いておいたりするとあとでみた人が楽しめるかもしれません。
   p 「複数行」にチェックを入れると、複数行发言が可能です。
-  p その右の「昼 5:23」は、現在の状态（昼か夜か）とその残り時間です。この場合、昼の話し合いはあと5分23秒で终了することを示しています。
-  p その右の「<b>遗言</b>」ボタンは、遗言を使用する設定になっているときだけ使えます。遗言は、処刑されたり襲われたりして死ぬときにメッセージを残せる機能です。遗言はいつでも書くことができます。
+  p その右の「昼 5:23」は、現在の状态（昼か夜か）とその残り时间です。この場合、昼の話し合いはあと5分23秒で终了することを示しています。
+  p その右の「<b>遗言</b>」ボタンは、遗言を使用する設定になっているときだけ使えます。遗言は、处刑されたり襲われたりして死ぬときにメッセージを残せる機能です。遗言はいつでも書くことができます。
   p 遗言ボタンを押すと遗言編集フォームが出現します。編集して决定すると戻ります。
   p その右の「<b>规则</b>」ボタンは、現在の配役や其他の规则を確認できるボタンです。
   p 最後の「全部」と書いてあるセレクトボックスは、表示するログを選択できます。
@@ -23,16 +23,16 @@ section.manual
   hr
   p
     img(src="/images/manual-play-game-2.png",alt="投票後のフォーム")
-  p 投票すると、このように緑のログが出ますが、これは<strong>自分にしか見えません</strong>ので安心して下さい。
+  p 投票すると、このように緑のログが出ますが、これは<strong>自己にしか見えません</strong>ので安心して下さい。
   p 投票すると上の投票フォームは消えます。
-  p 昼が终了して、まだ投票していない人がいる場合は犹豫時間になります。この時間は、发言はできませんが投票はできます。犹豫時間が終わってもまだ投票していない人は<strong>突然死</strong>します。これは<strong>重大なマナー違反</strong>なので避けましょう。
+  p 昼が终了して、まだ投票していない人がいる場合は犹豫时间になります。この时间は、发言はできませんが投票はできます。犹豫时间が終わってもまだ投票していない人は<strong>突然死</strong>します。これは<strong>重大なマナー違反</strong>なので避けましょう。
 
   h2 夜
-  p 全員が投票し終わると、最多の票数をもらった人が処刑されて夜になります。
+  p 全员が投票し終わると、最多の票数をもらった人が处刑されて夜になります。
   p 夜は、人狼が話し合いをしたり、占卜师や猎人が能力の対象を選択します。
   p
     img(src="/images/manual-play-game-3.png",alt="夜の猎人の様子")
-  p この画像は夜の猎人の様子です。投票フォームの代わりに护卫フォームが出現しています。また、夜の发言フォームは、人狼や共有者以外は「自言自语」のみです。自言自语は<strong>他の人には聞こえません</strong>。あとで見返したときに自分の推理が分かるように残しておくのもよいでしょう。
+  p この画像は夜の猎人の様子です。投票フォームの代わりに护卫フォームが出現しています。また、夜の发言フォームは、人狼や共有者以外は「自言自语」のみです。自言自语は<strong>他の人には聞こえません</strong>。あとで見返したときに自己の推理が分かるように残しておくのもよいでしょう。
   p 能力を発動すると赤いログが出現しますが、これも<strong>他の人には見えません</strong>ので安心して下さい。
   p
     img(src="/images/manual-play-game-4.png",alt="夜の人狼の様子")
@@ -43,10 +43,10 @@ section.manual
   h2 灵界
   p
     img(src="/images/manual-play-game-6.png",alt="灵界の様子")
-  p 上の画像のように、処刑されたり襲われたりして死んだ人は<b>灵界</b>という場所にいることになります。
+  p 上の画像のように、处刑されたり襲われたりして死んだ人は<b>灵界</b>という場所にいることになります。
   p 灵界では、全ての人的职业や会話を把握しながら観戦できます。また、灵界で发言すると、同じく灵界にいる人にしか聞こえませんので安心して会話できます。
-  h2 ゲームが终了したら
-  p 昼と夜を繰り返すうちに人数が減少して、そのうちゲームが终了します。终了したら、灵界と同じように、全員的职业や发言が全部見えるようになるので、ログを見直してみるのもおもしろいでしょう。
-  p また「以相同设定建立新房间」ボタンが全員に出現します。これを押すと同じ設定で次の部屋を建てられます。ただし部屋名などは新しく決められますし、建てた後に設定を変えることも可能です。部屋を建てるときは重複しないように、建てると宣言してから建てるのがよいでしょう。部屋の建て方は、<a href="play-owner">オーナーの流れ</a>を参照して下さい。
+  h2 游戏が终了したら
+  p 昼と夜を繰り返すうちに人数が減少して、そのうち游戏が终了します。终了したら、灵界と同じように、全员的职业や发言が全部見えるようになるので、ログを見直してみるのもおもしろいでしょう。
+  p また「以相同设定建立新房间」ボタンが全员に出現します。これを押すと同じ設定で次の部屋を建てられます。ただし部屋名などは新しく決められますし、建てた後に設定を変えることも可能です。部屋を建てるときは重複しないように、建てると宣言してから建てるのがよいでしょう。部屋の建て方は、<a href="play-owner">オーナーの流れ</a>を参照して下さい。
   h2 おかしいときは
-  p この人狼は基本的に手動の更新は不要ですが、タイミングの関係で動作がおかしくなる場合があります。たとえば他の人の发言が2重に表示されたり、時間が0になっても画面が切り替わらないときは、<strong>ブラウザの更新ボタンを押す</strong>か<strong>F5キーを押す</strong>などして<strong>ページを更新する</strong>とだいたい直ります。
+  p この人狼は基本的に手動の更新は不要ですが、タイミングの関係で動作がおかしくなる場合があります。たとえば他の人の发言が2重に表示されたり、时间が0になっても画面が切り替わらないときは、<strong>ブラウザの更新ボタンを押す</strong>か<strong>F5キーを押す</strong>などして<strong>ページを更新する</strong>とだいたい直ります。
