--- a/manual/play-other.jade
+++ b/manual/play-other.jade
@@ -5,7 +5,7 @@ section.manual
 
   h2 部屋を探す
   p <a href="/rooms">房间一览</a>に、現在たっている部屋の一览が表示されています。状态が「募集中」の部屋が、これから参加できる部屋です。
-  p <img src="/images/lock.png" alt="鍵">鍵のマークがついている部屋は房间加密の部屋で、入るときに密码を入力する必要があります。<strong>房间加密の部屋でも、终了した後は全員に公開されます。</strong>
+  p <img src="/images/lock.png" alt="鍵">鍵のマークがついている部屋は房间加密の部屋で、入るときに密码を入力する必要があります。<strong>房间加密の部屋でも、终了した後は全员に公開されます。</strong>
   p <img src="/images/blind.png" alt="匿名模式">このマークがついている部屋は<b>匿名模式</b>の部屋です。ふつうの部屋では、登録時に設定したユーザーIDと、設定したユーザー名を使って部屋に参加します。それに対し匿名模式の部屋では、その場で名字を決めてユーザーIDも分からないので、互いに誰か分かりません。
   p <img src="/images/gm.png" alt="GM">このマークがついている部屋は有GMの部屋です。GMは、加入游戏せずに動向を見守る人です。
   p 部屋名のリンクを開くとその部屋に入りますが、この時点では<strong>まだ加入游戏することにはなりません</strong>ので、気軽に部屋を開いて構いません。
@@ -15,13 +15,13 @@ section.manual
   p 「加入游戏」ボタンが表示されているので、クリックすると加入游戏できます。匿名模式の場合はこのとき名字を入力できます。
   h3 加入游戏したら
   p 加入游戏すると、「退出游戏」「准备/取消准备」「帮手」の3つのボタンがあります。
-  p 「退出游戏」ボタンを押すと参加を取りやめてゲームから抜けます。
-  p 「准备/取消准备」ボタンを押すと、参加者一览の自分の名字の下に<b>[ready]</b>というマークがつきます。これでゲームを開始する準備ができたことになります。オーナーは全員が<b>[ready]</b>をつけないとゲームを開始できないので、準備ができたら<b>[ready]</b>をつけてください。
+  p 「退出游戏」ボタンを押すと参加を取りやめて游戏から抜けます。
+  p 「准备/取消准备」ボタンを押すと、参加者一览の自己の名字の下に<b>[ready]</b>というマークがつきます。これで游戏を開始する準備ができたことになります。オーナーは全员が<b>[ready]</b>をつけないと游戏を開始できないので、準備ができたら<b>[ready]</b>をつけてください。
   p <b>[ready]</b>をつけている間はいつ始まってもいいように、目を離さないようにして下さい。席を外す場合は一旦<b>[ready]</b>を外して下さい。
-  p 「帮手」ボタンを押すと自分が<b>帮手</b>になります。帮手は加入游戏せず、他の人だれか一人に付き添って建议をする役になれます。
-  p 帮手はゲーム中、ヘルプ対象の人と同じ視点を持ち、ヘルプ対象の人だけに能听到ように发言できます。ヘルプ対象の人は自言自语で喋ることで、帮手と会話できます。
+  p 「帮手」ボタンを押すと自己が<b>帮手</b>になります。帮手は加入游戏せず、他の人だれか一人に付き添って建议をする役になれます。
+  p 帮手は游戏中、ヘルプ対象の人と同じ視点を持ち、ヘルプ対象の人だけに能听到ように发言できます。ヘルプ対象の人は自言自语で喋ることで、帮手と会話できます。
   p 帮手になったけど止めるときは、もう一度「帮手」ボタンを押してキャンセルすると元に戻ります。
   p 帮手になった人には<b>[帮手]</b>マークがつきます。帮手になっても<b>[ready]</b>マークはつける必要があるので注意して下さい。
 
-  h3 ゲームが始まったら
-  p <b>[ready]</b>をつけて待っていると、そのうちオーナーがゲームを開始します。ゲームを開始したあとについては、<a href="play-game">ゲーム中の流れ</a>を参照して下さい。
+  h3 游戏が始まったら
+  p <b>[ready]</b>をつけて待っていると、そのうちオーナーが游戏を開始します。游戏を開始したあとについては、<a href="play-game">游戏中の流れ</a>を参照して下さい。
