--- a/manual/play.jade
+++ b/manual/play.jade
@@ -11,17 +11,17 @@ section.manual
   p この名字は人狼に参加するときにも使われてIDも公開されますが、<b>匿名模式</b>の部屋の場合は、その場で名字を決めて入室してIDは明かされません。
  
   h2 遊ぶまでの流れ
-  p 人狼を遊ぶには、まず誰かが新しい<strong>部屋</strong>を作ります。部屋を作った人は<b>オーナー</b>になり、ゲームの规则設定をしてゲームを開始させる役割を持ちますが、これはいわゆる<strong>GMではありません</strong>（ただし、GMになることもできます）。ゲームが開始したあとは、オーナーも他の人と同じように参加できます。
+  p 人狼を遊ぶには、まず誰かが新しい<strong>部屋</strong>を作ります。部屋を作った人は<b>オーナー</b>になり、游戏の规则設定をして游戏を開始させる役割を持ちますが、これはいわゆる<strong>GMではありません</strong>（ただし、GMになることもできます）。游戏が開始したあとは、オーナーも他の人と同じように参加できます。
   p 既に部屋があればその部屋に参加したり、無ければ部屋を作って人を集めましょう。
-  p ゲーム開始までの詳しい流れは以下のページを参照して下さい。
+  p 游戏開始までの詳しい流れは以下のページを参照して下さい。
   ul
     li
       a(href="play-owner") オーナーの流れ
     li
       a(href="play-other") オーナー以外の流れ
   
-  h2 ゲームが始まったら
-  p <a href="play-game">ゲーム中の流れ</a>を参照して下さい。
+  h2 游戏が始まったら
+  p <a href="play-game">游戏中の流れ</a>を参照して下さい。
   
   h2 注意
   p 人狼に参加する前に、<a href="prohibited">禁止行為</a>に目を通すようにしましょう。
