--- a/manual/rule.jade
+++ b/manual/rule.jade
@@ -1,88 +1,88 @@
 section.manual
   p: a(href="/manual") 返回
   h1 规则
-  p 规则は最低限把握して、参加者に迷惑がかからないようにしましょう。
+  p 请把握最低限度的游戏规则，以免给其他参加者造成不必要的困扰。
   
-  h2 筋書き
-  p ある村に<b>人狼</b>が人类に化けて紛れ込んだ。夜な夜な村人が<b>人狼</b>に襲われている。
-  p 村人たちはだれが人狼か分からないので、人狼を退治するために毎日、人狼と思われる村人を一人処刑していくことにした。
+  h2 游戏背景
+  p <b>人狼</b>装扮成人类的样子潜入了某个村子。每天夜里<b>人狼</b>都会袭击村人。
+  p 村人们由于不知道人狼是谁，为了铲除人狼，每天都会将一个被认为是人狼的人处刑杀死。
   
-  h2 ゲームの概要
-  p 登場する村人は全員<b>参加者</b>です。参加者は全員ある村の一員ということになります。替身君（後述）を除いてNPCはいません。
-  p 参加者は2つ（またはそれ以上）の<b>阵营</b>（チーム）に別れ、阵营ごとに胜利を目指します。阵营は<b>村人阵营</b>と<b>人狼阵营</b>があり、場合によっては第三勢力として<b>妖狐</b>もいます。村人たちは互いの正体が分からないので、誰が敵で誰が味方かも分かりません。確かなのは自分の立場だけです。
-  p 参加者一人一人に村人や人狼をはじめとする<b>役職</b>（後述）が設定してあり、ゲーム開始時に参加者それぞれに割り当てられます。<b>人狼</b>と<b>狂人</b>が割り当てられた人が人狼阵营になります。ゲームが開始して自分的职业を把握したら所属する阵营も分かるので、その阵营的胜利に向けて動くわけです。
+  h2 游戏概要
+  p 登场的村人们全员都是<b>参加者</b>。参加者都是某个村子的一员。替身君（后述）以外全员不是NPC。
+  p 参加者分别从属于两个（或更多）<b>阵营</b>（队伍），以阵营为单位追求胜利。阵营主要由<b>村人阵营</b>与<b>人狼阵营</b>组成，根据情况也可能会有<b>妖狐</b>这样的第三阵营。村人们不知道彼此的真正身份，不知道谁是敌人，谁是同伴。能够确定无误的只有自己的立场。
+  p 参加者们被设定为以村人和人狼的<b>职业</b>（后述）参与游戏，游戏开始时参加者将被分配各种职业。被分配为<b>人狼</b>与<b>狂人</b>将属于人狼阵营。游戏开始后即将得知自己的职业和自己所属的阵营，向着本阵营获得胜利的目标前进吧。
   h2 胜利条件
-  p 処刑により人狼を全員殺せば、<b>村人阵营</b>の胜利になります。ですから村人阵营の目的は、うまく人狼を処刑して人狼を全滅させることです。
-  p 人狼は1対1なら村人を食い殺すことができますが、村人がたくさんいるとそうもいきません。村人の数を減らし、村人の数が人狼と同じかそれ以下になれば人狼は村人達を食い殺すことができます。これが<b>人狼阵营</b>の胜利です。人狼阵营の目的は、人狼が処刑されるのをうまく避けて村人を減らしていくことです。
-  p また、第三勢力の<b>妖狐</b>がいる場合、村人と人狼のどちらかの阵营が胜利条件を満たしたときまだ妖狐が生存していれば、胜利を横取りします。ですから、妖狐の目的はとにかく生き残ることです。
-  p 妖狐がいるときは、村人阵营は人狼の他に妖狐も殺さないといけないことになります。人狼阵营も同様です。
+  p 通过处刑将全部人狼处死后<b>村人阵营</b>即获得胜利。所以村人阵营的目的是按照这个目标将人狼全灭。
+  p 人狼在一对一的情况下能够毫无疑问地捕食村民，如果村人的人数很多这就办不到了。通过减少村人的人数，把村人的人数减少为与人狼相同或更少，人狼们就能够一对一的把村人全部捕食。这就是<b>人狼阵营</b>的胜利。人狼阵营的目的是，成功的躲过村人对人狼的处刑，并减少村人的人数。
+  p 此外，第三阵营的<b>妖狐</b>存在时，如果村人或人狼的一方达成了胜利条件，而此时妖狐还活着，妖狐将会从旁夺取胜利的果实。因此，妖狐的目的是不择手段的活下去。
+  p 妖狐存在的时候，村人阵营除了人狼也不得不将妖狐全灭。人狼阵营也是同样。
   
-  h2 ゲームの進行
-  p ゲームは<b>昼</b>と<b>夜</b>に分かれています。
-  p 最初は<b>一日目の夜</b>に村人が一人人狼に殺されて<b>事件発生</b>するところからスタートです。
+  h2 游戏的进行
+  p 游戏以<b>昼</b>与<b>夜</b>为单位进行。
+  p 游戏以<b>第一天夜里</b>一名村人被人狼<b>这一事件的发生</b>作为一场游戏的开端。
   
-  p 夜の間には、<b>人狼</b>が話し合いをしたり、<b>能力者</b>（後述）が能力を発動したりします。また、夜の間に人狼たちは話し合い（人狼以外には内容は分かりません）、一人村人を襲って殺します（殺された人は翌朝判明します）。
-  p そして一定時間が経つと<b>2日目昼</b>になります。
-  p 昼には村人全員で話し合いをして、人狼だと思われる人に投票する<b>処刑投票</b>を行います。投票は、一人一票村人のうちの誰かに投票して、一番多く投票された人が<b>処刑</b>されます。
-  p 村人達は誰が人狼か分かりませんから、昼の話し合いには人狼阵营の人も村人阵营のふりをして混ざります。人狼阵营の人は、話し合いをうまく人狼有利の方向に持っていこうとします。
-  p 投票が终了して処刑されると、次は<b>2日目夜</b>になります。以後、同様にゲーム终了まで昼と夜が繰り返されます。
-  p このように、夜（人狼による殺害）と昼（村人たちによる処刑）を繰り返して人数が減っていき、どちらかが胜利条件を満たした時点でゲームが终了になります。
-  p 死亡した人は、基本的にはあとは見ているだけです。話し合いに参加したりすることはできません。ただし、死んだら負けというわけではなく、自分が死んでいても自分の阵营が胜利したら自分も勝ちなので、最後まで観戦するとよいでしょう。
+  p 在夜间，<b>人狼</b>能够相互对话，<b>能力者</b>（后述）能够发动能力。然后，夜间人狼们进行商议（人狼以外不能得知谈话的内容），袭杀一名村人（被杀的人将在第二天早上被发现）。
+  p 经过了一定得时间之后，夜晚结束，变为<b>第二天白天</b>。
+  p 在白天里村子里的所有人进行商议，并举行向怀疑为人狼的人投票的<b>处刑投票</b>活动。这个投票的内容是一人一票向村子里的某人投票，得票最多的人将被<b>处刑</b>。
+  p 因为村人们不是道谁是人狼，白天的商谈人狼们和村人们是混杂在一起的。人狼阵营的人，会将谈话向对人狼有利的方向引导。
+  p 投票结束后将进行处刑，接着就是<b>第二天夜里</b>。此后将不断重复昼夜，直到游戏结束。
+  p 像这样，每天夜里（被人狼杀死）与白天（被村人处刑）不断重复在减少人数，直到某一方的胜利条件达成了，即宣告游戏结束。
+  p 死掉的人，基本上就只能看着游戏继续进行下去了，不能够再参与村子里的讨论。但是，死亡并不意味着败北，即使自己死了如果自己的阵营取胜了，自己也能胜利，所以一直观战到最后吧。
   
-  h2 役職
-  p 人狼では、参加者一人一人に<b>役職</b>が割り当てられます。ゲーム開始時に自分的职业が分かります。
-  p 役職ごとに異なる能力を持っています。以下に基本的な役職を紹介します。
+  h2 职业
+  p 人狼游戏的每一名参加者都会被分配一个<b>职业</b>。游戏开始时就能获知自己的职业。
+  p 各个职业都持有各自不同的能力。以下将介绍一些常见的职业。
   h3 村人阵营的职业
-  p <b>村人阵营</b>的职业は、村人の仲間なので、人狼を根絶することを目標にゲームを進めます。昼の話し合いは一般的には前述のとおり村人視点で行われるので、村人阵营の人は基本的には嘘をつきません。村人なのに嘘をついて村に不利益を与えること<small>（リア狂）</small>は推理を乱すので、重大な迷惑行為となります<small>（まれに、村人が嘘をついて村が有利になるという例外的な場面もあります）</small>。
-  p 最初的职业はただの<b>村人</b>です。こ的职业は特別な能力を持たないので、村人阵营的胜利に協力するためには<strong>処刑するべき相手を見極めて投票すること</strong>です。推理や勘を活かしましょう。
-  p ちなみに、「村人」という言葉には、「参加者全員」という意味の場合と「村人阵营の人」という意味の場合と役職名の「村人」という意味の3つがあります。区別のために、役職名としての村人は<b>素村</b>と呼ぶこともあります。
+  p <b>村人阵营</b>的职业是村人的同伴，以根绝人狼为目的进行游戏。在白天的谈话中一般如前述以村人的立场看待问题，村人阵营的人一般是不说谎的。明明是村人还说谎的话对村人阵营是十分不利的<small>（リア狂）</small>扰乱推理的，十分严重的不良行为<small>（然而，村人撒谎反而对村人阵营有利的例外情况也是存在的）</small>。
+  p 第一个讲解的职业是一般的<b>村人</b>。这个职业没有特别的能力，只是为了村人阵营的胜利而协力，<strong>向他人投票将其处死</strong>这样的事情。为了推理与判断而生。
+  p 顺便一提，在说到「村人」一词的时候，可能有有「参加者全员」、「村人阵营的人」与职业名的「村人」这三种意思，请注意语境进行区别。
   
   hr
 
-  p 直接的に胜利に貢献できるのが<b>占卜师</b>です。夜の間に一人を選択して占って、その人は村人か人狼か知ることができます。
-  p 占卜师は基本的には、村のみんなに対してCO<small>(カミングアウト;自分的职业を公表すること)</small>して占卜结果を発表し、村を有利な方向に導きましょう。
-  p ただし、占卜师だとCOするのは真占い<small>(真の占卜师=本物の占卜师)</small>だけではありません。後述の人狼阵营の人たちも、村を混乱させることを狙って偽の占いCOをしてくる可能性が高いです。普通の人たちからは簡単には判断がつきませんので、冷静に自分の役目を果たしていきましょう。
-  p 其他にも、妖狐（後述）を呪殺するという役目もあります。
+  p <b>占卜师</b>是向胜利做出最直接贡献的人。在夜间可以选择一人进行占卜，判断其是否为人狼。
+  p 占卜师一般会向村民们CO<small>(coming out;出柜;跳占)</small>公布占卜结果，将村子向对村人有利的方向引导。
+  p 但是必须注意，跳占的不一定是真占。后述的人狼阵营的人为了引起村民的混乱假冒占卜师跳占的可能性也很高。普通人由于无法简单的判断占卜师的真伪，请冷静的判断完成自己的使命。
+  p 除此之外，占卜师还有咒杀妖狐（后述）的能力。
   hr
   
-  p <b>灵能者</b>は、処刑によって殺された人が村人だったか人狼だったかを判断できる役職です。夜に人狼によって襲われた人は確実に村人ですから、灵能者は今生きている村人の中に何人人狼が紛れて残っているかを把握できます。
-  p 前述のように複数人が占いCOした場合、その真偽を確かめるのに役立つ場合があります。
+  p <b>灵能者</b>是判断<strong>被处刑杀死</strong>的人是否是人狼的职业。由于夜间人狼袭击的人一定是村人，灵能者可以把握现在活着的人中有几名人狼。
+  p 前述的有复数人跳占的时候，确认其真假正是灵能者大显身手的机会。
   hr
   
-  p <b>猎人</b>は、夜の間に誰か一人を护卫し、人狼がその人を襲撃した場合に人狼から守ることができます（一般にこれが成功した場合をGJ<small>(Good Jobの略)</small>といいます）。
-  p 人狼が占卜师に占われるのを恐れて占卜师を襲ってきたり、前述の灵能者が占卜师の真偽を判断する場合、人狼側は真占卜师が確定して人狼側が不利になることを恐れて灵能者を狙ってくることがあります。そういった場合に占卜师や灵能者を確実に生かしておいて村を有利に進めるのが猎人の役目です。
+  p <b>猎人</b>能够在夜间选择一个人进行守护，使其免遭人狼侵害，成功护卫的情况一般称为GJ<small>(Good Job)</small>。
+  p 人狼因为害怕被占卜师占卜二袭击占卜师的时候；前述的灵能者判断跳占真假时，人狼阵营为了阻止这一判断成功而袭击灵能者的时候。猎人是在这些时候确保占卜师、灵能者的生存，向对村子有利的方向推动游戏的职业。
   hr
   
-  p <b>共有者</b>は一般に2人セットです。共有者は他の共有者を認識して、夜の間に共有者たちだけで会話することができます。
-  p 共有者は互いに確認できるので、2人がCOするとほとんど確定白<small>（白：人狼でなくて村人であること。確定白は白であることが確定しているということ）</small>となります。
-  p なぜならば、共有者を騙る<small>（偽のCOをする）</small>には人狼側も共有者役を2人用意する必要があり負担が大きいのでめったに起こらないと考えられるからです。
+  p <b>共有者</b>一般为两人。共有者能够辨认其他共有者，夜间共有者之间能够进行对话。
+  p 因为共有者能够互相确认，2人CO的时候几乎是确定白<small>（白：不是人狼而是村人。确定白即有决定性证据证明不是人狼）</small>。
+  p 之所以这么说，是因为伪装成共有者需要人狼阵营有两人同时这么做，这样风险很高，可以认为基本不会发生。
   
   h3 人狼阵营的职业
-  p 人狼阵营は、村の推理をかき乱して村人を減らすことを目標に動きます。当然ながら話し合いの中で嘘を付いても構いません。
-  p <b>人狼</b>は、前述の通り村人を襲う役職です。人狼は夜の間に村人を一人襲って殺すことができます。これが、人狼が村人を減らしていく直接的な手段です。他には、昼の処刑のときもうまく村人侧の人を処刑するように持ち込むことも重要です。
-  p 人狼は2人以上いる場合でも殺すのは夜1回につき1人です。したがって、夜は人狼たちで誰を殺すか話し合うことになります。
+  p 人狼阵营的目的是扰乱村子的推理以减少村民人数。那么在谈话中说谎简直是理所当然的事。
+  p <b>人狼</b>正如前述是袭击村人的职业。人狼能够在夜间袭击并杀死一个村人。这是人狼减少村人人数的最直接手段。此外，在白天的处刑中尽量处死村人也是重要的手段。
+  p 人狼有两人以上的时候，每天夜里也只能杀死一人。为此，人狼们会在夜间就「杀死谁」这一问题展开讨论。
   hr
   
-  p 他に人狼阵营的职业として<b>狂人</b>があります。これは、村人であるにも関わらず人狼の胜利を目標とする人です。
-  p 村人であるとは、占卜师や灵能者からは村人であると判断されるということです。その特性を活かして村を人狼有利の方向へ持っていきましょう。一般に、占い騙り<small>（占いのふりをしてCOして偽の结果も出すこと）</small>や灵能騙りをするなどして村を撹乱します。
-  p 狂人はとにかく基本は村人ですから、人狼の胜利判定のときにも村人侧として数えられるので、例えば「ただの村人が2人、狂人が1人、人狼が2人」という5人が生存しているときは、人狼側優勢にも関わらずまだゲームは终了しません。
-  p もっともこの場合はPP<small>（パワープレイ: 人狼側のほうが合計票数が多いので、人狼と狂人が票を合わせて村人を処刑すること）</small>が起こることが多いです。
+  p 人狼阵营的其他职业都是<b>狂人</b>或者狂人的变种。这些人虽然是村人，却以人狼的胜利为目标推进游戏。
+  p 占卜师和灵能者会将狂人判断为村人。狂人们会善用这一特性创造有利条件。经常会跳占<small>（跳占给出假的占卜结果）</small>和跳灵能来扰乱村民的视线。
+  p 狂人在本质上来讲是村人，在人狼进行胜利判定时也会被记为村人，例如「普通村人2人、狂人1人、人狼2人」这样的5人生存的时候，虽然人狼阵营十分有优势，但是游戏不会直接结束。
+  p 虽说这时候一般会PP<small>（power play: 人狼侧的合计票数过半，人狼与狂人联合强行票死村人）</small>，相应的村人只好GG。
   
   h3 妖狐
-  p 役職の一つである<b>妖狐</b>は、村人侧でも人狼側でもない<strong>第三の阵营</strong>で、村人と人狼両方から狙われます。一般的な规则では妖狐は一人だけです。
-  p 妖狐の目的は人狼同様に村を支配することであり、その胜利条件は<b>村人か人狼かの胜利が决定したときにまだ生存していること</b>です。ですから、例えば妖狐が生存しているまま人狼が全滅した場合、妖狐の胜利となります。このとき妖狐は独り勝ちしてしまいますから、村人たちは人狼を全滅させる前に妖狐も殺す必要があります。
-  p また、妖狐は村人にも人狼にもカウントされません。このことは、人狼の胜利条件に関わってきます。人狼の胜利条件は「村人の数が人狼の数以下になること」ですが、例えば5人生き残っていて内訳が村人2人、人狼2人、妖狐1人のときは、妖狐にはどちらにもカウントされないので村人の数は人狼以下となり決着がつきます（妖狐胜利）。
+  p <b>妖狐</b>这一职业，是既不属于村人侧也不属于人狼侧的<strong>第三阵营</strong>，会遭到人狼与村人两房的合力狙杀。按照一般的规则妖狐是只有一人的。
+  p 妖狐与人狼的目的同样是支配村子，妖狐的胜利条件是<b>生存下去直到村人与人狼一方获胜为止</b>。例如，妖狐生存，但是人狼全灭的时候，妖狐将获得胜利。这将导致村人的败北，因此村人在全灭人狼之前一定要先干掉妖狐。
+  p 此外，妖狐在胜利判定的时候既不记为村人，也不记为人狼。这一事实关系到了人狼的胜利判定。人狼的胜利条件是「村人的人数小于人狼的人数」，例如，参加者人生存，其中村人2人，人狼2人，妖狐1人的时候，妖狐不会被记为任何一方，游戏将因此得出胜负（妖狐胜利）。
 
-  p 妖狐を殺す手段は2つあります。一つは処刑であり、もう一つは<b>呪殺</b>です。呪殺は、占卜师が妖狐を占うと妖狐が死ぬというものです。このため、妖狐がいる村では占卜师はさらに重要な役割を果たします<small>（それにも関わらず、人狼側にとっても妖狐は邪魔な存在なので、逆に人狼は占卜师を襲わなくなる傾向もあります）</small>。
-  p また、呪殺は真占卜师を判断する方法になることもあります。偽の占卜师は呪殺を起こせませんから、複数いる占卜师のうち誰が呪殺したのかが確定すれば、その占卜师が真であることが確定します。
-  p 人狼が妖狐を襲った場合、妖狐は<strong>死にません</strong>（死体無し）<small>（死体無し：朝になっても誰も死んでいなかった状态。妖狐の場合と、猎人がGJした場合がある）</small>。
-  p 妖狐になった場合、占われることも吊られる<small>(処刑される)</small>こともなく最後まで生き延びましょう。また、噛まれた<small>（人狼に襲われた）</small>場合も死なないので人狼に告発される<small>（人狼が自らCOして妖狐を指摘する）</small>可能性が生じるので避けたいところです。
+  p 杀死妖狐的手段有两个。其一为<b>「处刑」</b>，其二为「咒杀」。咒杀是指占卜师占卜了妖狐之后，导致妖狐死亡。这正是在有妖狐的村子里，占卜师的一个重要作用<small>（不止如此，由于妖狐对人狼侧来说是十分碍事的存在，人狼反过来因此不去袭击占卜师的可能性也是有的）</small>。
+  p 另外，咒杀是判断占卜师真伪的有效方法。由于假的占卜师无法实施咒杀，所以一旦确定了复数占卜师中是谁咒杀了妖狐，这个占卜师的真伪就能够确定了。
+  p 人狼袭击妖狐的场合下，妖狐是<strong>不会死的</strong>（平安夜）<small>（平安夜：到了早上没有人死亡。会在妖狐被咬的时候、猎人GJ的时候、人狼袭击人狼的时候出现）</small>。
+  p 成为妖狐的时候，尽量不被占卜，不被处刑努力地活到最后吧。此外，由于人狼是咬不死妖狐的，人狼自爆指认妖狐的可能性也是有的，可能的话还是尽量避开这种情况。
   
   h2 其他
-  p 其他知っておくべき事項を紹介します。
+  p 接下来介绍一下其他需要知道的事项。
   h3 替身君
-  p <b>替身君</b>は、設定によってはNPCとして参加者の中に混ざって登場する人です。
-  p 一日目の夜に人狼に襲われる人は完全に見ているだけでかわいそうなので、代わりに一日目の夜に殺されてくれます。
-  p そのため、替身君は人狼や妖狐になることはありません（占卜师や灵能者や狂人など、それ以外にはなりますので、それを考慮して推理する必要があります）。
+  p <b>替身君</b>是按照房间设定混入参加者中的NPC。
+  p 「第一天夜里就被人狼杀死的人，只能干看着游戏发展实在是太可怜了」，替身君基于这种考虑为了在第一夜做替死鬼而诞生的。
+  p 因此，替身君默认情况下是不能成为人狼或妖狐的（占卜师、灵能者、狂人等等人狼与妖狐以外的职业，替身君则可能出现，考虑到这一点进行推理是十分有必要的）。
   
-  p 规则を読んだら、次は<a href="/welcome.jade">人狼入門</a>を読んで参加しましょう。
+  p 规则的阅读到此结束，接下来请阅读<a href="/welcome.jade">人狼入门</a>加入游戏吧。
