--- a/manual/top.jade
+++ b/manual/top.jade
@@ -7,9 +7,9 @@ section.manual
     li: a(href="/manual/features") 游戏简介
     li: a(href="/manual/spec") 游戏说明
     li: a(href="/manual/rule") 游戏规则
-    li: a(href="/manual/play") 游戏方法
-    li: a(href="/manual/prohibited") 禁止行为・注意事项
-    li: a(href="/manual/welcome") 人狼入门
-    li: a(href="/manual/joblist") 职业一览（已完全汉化）
-    li: a(href="/manual/casting/index") 配置一览（已完全汉化）
+    li: a(href="/manual/play") 游戏方法（暂无翻译）
+    li: a(href="/manual/prohibited") 禁止行为・注意事项（暂无翻译）
+    li: a(href="/manual/welcome") 人狼入门（暂无翻译）
+    li: a(href="/manual/joblist") 职业一览
+    li: a(href="/manual/casting/index") 配置一览
     li: a(href="/manual/changelog") 更新履历
