--- a/manual/welcome.jade
+++ b/manual/welcome.jade
@@ -1,23 +1,23 @@
 section.manual.long
   p: a(href="/manual") 返回
   h1 人狼入門
-  p 人狼はわりと難しいゲームです。始めての人や初心者の人向けに、人狼に参加するときの基本的な心得について紹介します。
+  p 人狼はわりと難しい游戏です。始めての人や初心者の人向けに、人狼に参加するときの基本的な心得について紹介します。
   p このページより先に、<a href="rule">规则</a>は一読しておきましょう。
   p このページは入門なので、基本的な人狼（普通配役のもの）について解説します。複雑な人狼については、応用力をはたらかせていきましょう。
   
   section
     h2 基本的な進行
-    p 规则のほうで、人狼は<b>昼</b>と<b>夜</b>が交互に繰り替えされるということを説明しました。一般的な流れとしては、昼になるとまず<b>挨拶</b>が行われます。とりあえず「おはよう」とか挨拶しておくといいでしょう（ただし、役職者の場合はそうでもないことがあります）。
-    p その後は、能力者の<b>CO</b>（カミングアウト：自分的职业を公表すること）があることが多いです。それをもとに参加者たちは推理を始めます。そして、最終的に昼が終わるときに投票をします。
+    p 规则のほうで、人狼は<b>昼</b>と<b>夜</b>が交互に繰り替えされるということを説明しました。一般的な流れとしては、昼になるとまず<b>挨拶</b>が行われます。とりあえず「おはよう」とか挨拶しておくといいでしょう（ただし、职业者の場合はそうでもないことがあります）。
+    p その後は、能力者の<b>CO</b>（カミングアウト：自己的职业を公表すること）があることが多いです。それをもとに参加者たちは推理を始めます。そして、最終的に昼が終わるときに投票をします。
     p その後夜になると、能力者の場合は能力を発動しますが、他の人はやることがありません。夜にもやはり推理をしましょう。昼の間に行われたみんなの发言を推理材料にするとよいでしょう。
     p 次の昼になると、<strong>朝の死体</strong>が発見されます。これは、夜に人狼に襲われた人です。基本的に朝の死体は1つですが、場合によっては死体がなかったり、2つだったりします。
-    p このように人狼に襲われたり処刑されたりした人はそれ以降加入游戏できません。見ているだけになります。死んだ後は、既に死んだ人同士で会話することができます。これはまだ生きている人には届きません。死んだ後の状态は<b>灵界</b>と呼ばれます。
-    p 人狼においては、自分が人狼ではないのに人狼ではないかと疑われることもあります。あまり感情的にならないようにしましょう。
-    p また、占卜师（後述）が自分を人狼でないのに人狼であると言ってくる場合があります。その場合もその人が偽者であるだけです。あせらずに、推理材料が増えたと喜びましょう。
+    p このように人狼に襲われたり处刑されたりした人はそれ以降加入游戏できません。見ているだけになります。死んだ後は、既に死んだ人同士で会話することができます。これはまだ生きている人には届きません。死んだ後の状态は<b>灵界</b>と呼ばれます。
+    p 人狼においては、自己が人狼ではないのに人狼ではないかと疑われることもあります。あまり感情的にならないようにしましょう。
+    p また、占卜师（后述）が自己を人狼でないのに人狼であると言ってくる場合があります。その場合もその人が偽者であるだけです。あせらずに、推理材料が増えたと喜びましょう。
 
   section
-    h2 役職ごとの心得
-    p 人狼にはいくつか的职业があります。役職はそれぞれ<b>阵营</b>に属しているので、自分が<strong>所属する阵营的胜利</strong>を目指しましょう。
+    h2 职业ごとの心得
+    p 人狼にはいくつか的职业があります。职业はそれぞれ<b>阵营</b>に属しているので、自己が<strong>所属する阵营的胜利</strong>を目指しましょう。
 
   section
     h2 村人阵营
@@ -27,14 +27,14 @@ section.manual.long
     p 注意すべきことは、村人侧の場合基本的に嘘はつきません。嘘をついても村人は得をしないからです。例外もあることにはありますが、村人侧ならば嘘はつかないようにしましょう。
     section
       h3 村人
-      p <b>村人</b>の場合は、特別な能力は何もありません。できることは推理することだけです。投票が唯一の武器になりますので、しっかりと推理することが望まれます。考え方によっては、後述の占卜师などよりも難しいかもしれません。
+      p <b>村人</b>の場合は、特別な能力は何もありません。できることは推理することだけです。投票が唯一の武器になりますので、しっかりと推理することが望まれます。考え方によっては、后述の占卜师などよりも難しいかもしれません。
     section
       h3 占卜师
       details
         summary 占卜师は<strong>グレー</strong>を占いましょう。结果はなるべく速く伝えましょう。
 
-        p <b>占卜师</b>をはじめとする役職の重要な役目は、<strong>村に情報を伝えること</strong>です。
-        p 占卜师は夜に一人を占って、その人が人狼かそうでないかを判断する能力を持っています。村は、人狼が見つかったらとても助かりますので、人狼を見つけることを目標にしましょう。もちろん、人狼でないという结果が出ても、その人を処刑候補から外すことができるので無駄ではありません。
+        p <b>占卜师</b>をはじめとする职业の重要な役目は、<strong>村に情報を伝えること</strong>です。
+        p 占卜师は夜に一人を占って、その人が人狼かそうでないかを判断する能力を持っています。村は、人狼が見つかったらとても助かりますので、人狼を見つけることを目標にしましょう。もちろん、人狼でないという结果が出ても、その人を处刑候補から外すことができるので無駄ではありません。
         p 占卜师は、2日目の昼（最初の昼）COすることが多いですが、潜伏（COしないで村人に混じっていること）することもあります。初心者でよく分からない場合は、COしてしまっていいでしょう。もし潜伏している場合は、<b>遗言</b>（死んだときに発表される文章）がある場合、遗言でCOして今までの占卜结果をちゃんと書いておきましょう。
         section
           h4 COについて
@@ -42,34 +42,34 @@ section.manual.long
             summary 特に考えがなければすぐにCOして構いません。
             p 占卜师がCOするタイミングについては上で2日目がよいと書きましたが、基本的にCOする場合は「おはよう」などの挨拶はしないほうがよいかもしれません。場合によっては、他の村人の様子を伺ってから占卜师を騙るか騙らないかを決めたとみなされるかもしれないからです。そうはいっても、逆に偽の占卜师をあぶり出すために最初は普通の村人を装って挨拶するということもあるかもしれないので、一概にはいえません。
             p しかし、特に<b>人狼判定</b>が出た場合はなるべく速いタイミングで出るのがいいでしょう。なるべく速くCOするために、夜のうちに发言欄にあらかじめ「占いCO ××さんは」まで入力しておくとかそういう場合もあります。
-            p また、占卜师というのは強力ですから、人狼にとっては脅威です。そこで、人狼は隙があれば占卜师を噛んで（襲って）こようとするでしょう（ただし、占卜师が複数いる場合に誰が本当の占卜师かばれると困る場合などに躊躇することもありますが）。それなのに占卜师が早速COするというのは、<strong>猎人</strong>による抑止力があるからです。猎人は後述しますが、人狼からだれか一人を守る役職です。占卜师は村にとって重要ですから、猎人が占卜师を守っている可能性が大きいので、人狼は占卜师を噛むのを躊躇してくるかもしれません。これについては後述の灵能者にも同じことが言える場合もあるでしょう。
+            p また、占卜师というのは強力ですから、人狼にとっては脅威です。そこで、人狼は隙があれば占卜师を噛んで（襲って）こようとするでしょう（ただし、占卜师が複数いる場合に誰が本当の占卜师かばれると困る場合などに躊躇することもありますが）。それなのに占卜师が早速COするというのは、<strong>猎人</strong>による抑止力があるからです。猎人は后述しますが、人狼からだれか一人を守る职业です。占卜师は村にとって重要ですから、猎人が占卜师を守っている可能性が大きいので、人狼は占卜师を噛むのを躊躇してくるかもしれません。これについては后述の灵能者にも同じことが言える場合もあるでしょう。
         section
           h4 占い先について
           details
             summary 基本は<b>グレー</b>占いです。占いや灵能COした人を占うのはなるべく避けましょう。分からなければ村の人たちに占い先を相談してみるのも手です。
             p 占卜师の役目を果たすにあたって重要なことは<strong>誰を占うか</strong>です。
             p まず、基本的には<strong>グレー潰し</strong>が基本です。グレーとは、まだ占われていない人のことです。特に序盤のうちは<b>完グレ</b>（完全グレー。どの占卜师からも占われていない人）を占っていくとよいでしょう。
-            p 完グレについては、自分には自分が真占い（本物の占卜师）であることが分かっているのですから他の偽占卜师のことまで考慮してやりたくないと思うかもしれませんが、どの占卜师が本物か判断がついていない他の参加者たちにとっては、なるべく情報が多いほうが助かるということもあります。ただし、逆に「<b>確定村人</b>を作りたい」などの理由から場合によっては他の偽占卜师が既に占った人を占うこともあります。複数の占卜师から、特にCOした占卜师全てから村人判定を出された人は、村人である（人狼ではない）可能性が極めて高いからです。
+            p 完グレについては、自己には自己が真占い（本物の占卜师）であることが分かっているのですから他の偽占卜师のことまで考慮してやりたくないと思うかもしれませんが、どの占卜师が本物か判断がついていない他の参加者たちにとっては、なるべく情報が多いほうが助かるということもあります。ただし、逆に「<b>確定村人</b>を作りたい」などの理由から場合によっては他の偽占卜师が既に占った人を占うこともあります。複数の占卜师から、特にCOした占卜师全てから村人判定を出された人は、村人である（人狼ではない）可能性が極めて高いからです。
             p ちなみに、グレーと言う場合何かをCOした人は入りません。気をつけるべきことは、他的职业者（灵能者など）や、対抗として出てきた偽の占卜师を占うのは避けたほうがいいということです。なぜなら、他の参加者にとってその情報はほとんど意味がないからです。ちなみに、対抗の占卜师を占った場合、村人判定が出る場合も人狼判定が出る場合もあります。もし村人判定が出たならば、その偽占卜师は<b>狂人</b>です。人狼判定が出たならばその偽占卜师は<b>人狼</b>です。狂人は人狼阵营ですが村人として数えられますから、場合によっては「狂人まで吊っている余裕がない」（人狼だけを的確に吊らないと負けてしまう）という場合もありますが、基本的には狂人だろうと人狼だろうと人外（村人阵营以外の人）ならば吊ってしまえばいい話なので、対抗が狂人であるか人狼であるかの情報には大して価値がないことが多いのです。
-            p 灵能者を占うのも同様です。どうせ、灵能者を占って村人判定が出たとしても、真灵能者（本物の灵能者）か、あるいは狂人の騙りであるかは判断できませんので意味はほとんどありません。
-            p また、グレーを占う場合でも、「ほっといても吊られそうな人」は占わないほうがいい場合が多いです。例えば、口数が少ない人などですね。占わなくても、吊られてしまえば<b>灵能者</b>が判断してくれます（後述）し、吊ってそれで人狼だったならばラッキーです。それよりは、生き残りそうな人のほうを占っておいたほうが有意義です。また、その灵能者そのものも、処刑されてしまうことが多いので占わないのが無難です。
-            p また、占卜结果を発表する場合は「占い理由」が伴っていると信用が上がることでしょう。ゲーム開始直後の1日目夜の占いは何も情報がないのでどうしようもないですが、それ以降はグレーの人でも「发言内容」とか「誰に投票したか」などが理由になります。
+            p 灵能者を占うのも同样です。どうせ、灵能者を占って村人判定が出たとしても、真灵能者（本物の灵能者）か、あるいは狂人の騙りであるかは判断できませんので意味はほとんどありません。
+            p また、グレーを占う場合でも、「ほっといても吊られそうな人」は占わないほうがいい場合が多いです。例えば、口数が少ない人などですね。占わなくても、吊られてしまえば<b>灵能者</b>が判断してくれます（后述）し、吊ってそれで人狼だったならばラッキーです。それよりは、生き残りそうな人のほうを占っておいたほうが有意義です。また、その灵能者そのものも、处刑されてしまうことが多いので占わないのが無難です。
+            p また、占卜结果を発表する場合は「占い理由」が伴っていると信用が上がることでしょう。游戏開始直後の1日目夜の占いは何も情報がないのでどうしようもないですが、それ以降はグレーの人でも「发言内容」とか「誰に投票したか」などが理由になります。
         section
           h4 呪殺について
-          p 占卜师は、妖狐を占った場合、その人を<strong>呪殺</strong>します。これは「銃殺」と呼ばれることもあります。呪殺が起こった場合、<b>朝の死体</b>が2つになります（ただし、人狼の襲撃が失敗した場合（妖狐を襲撃または猎人のGJ（後述））は1つしかありません）。こういった場合、占卜师からはどちらが妖狐かが確定しますが、他の村人からはどちらが妖狐で、どちらが人狼に襲われたのか分かりません。いずれにしろ、ここでその2人以外を占ったと主張する占卜师は、破綻（本物である可能性がなくなること）したことになります。
-          p 呪殺が起こった場合、真占卜师は真証明（本物だと証明すること）がしやすいです。本物の占卜师はすぐに占卜结果を発表することができますが、偽の占卜师は自分が用意していた偽の占卜结果を、破綻しないように変更しないといけないため、发言が遅れるからです。
+          p 占卜师は、妖狐を占った場合、その人を<strong>呪殺</strong>します。これは「銃殺」と呼ばれることもあります。呪殺が起こった場合、<b>朝の死体</b>が2つになります（ただし、人狼の襲撃が失敗した場合（妖狐を襲撃または猎人のGJ（后述））は1つしかありません）。こういった場合、占卜师からはどちらが妖狐かが確定しますが、他の村人からはどちらが妖狐で、どちらが人狼に襲われたのか分かりません。いずれにしろ、ここでその2人以外を占ったと主張する占卜师は、破綻（本物である可能性がなくなること）したことになります。
+          p 呪殺が起こった場合、真占卜师は真証明（本物だと証明すること）がしやすいです。本物の占卜师はすぐに占卜结果を発表することができますが、偽の占卜师は自己が用意していた偽の占卜结果を、破綻しないように変更しないといけないため、发言が遅れるからです。
           p ちなみに、妖狐が死んだことが客観的に明らかになるのは、朝の死体が2つあったときのみです。
 
     section
       h3 灵能者
       details
         summary 灵能者は结果を発表していれば役目を果たせます。基本は占卜师の後くらいにCOしますが占卜师が黒を出したら潜伏することが多いです。
-        p <b>灵能者</b>は受動的な役職です。初心者がやる分には、ただ结果のみを発表していれば役目を果たしたことになるので楽な役職といえるでしょう。
-        p 灵能者は、「処刑された人」が村人だったか人狼だったかが分かる役職です。これは、次の朝に自動的に分かります。「人狼に襲われた人」が人狼のわけがありませんから、灵能者は人狼が今までに何人死んだか、逆に言えばまだ何人の人狼が生き残っているかが正確に分かります。
+        p <b>灵能者</b>は受動的な职业です。初心者がやる分には、ただ结果のみを発表していれば役目を果たしたことになるので楽な职业といえるでしょう。
+        p 灵能者は、「处刑された人」が村人だったか人狼だったかが分かる职业です。これは、次の朝に自動的に分かります。「人狼に襲われた人」が人狼のわけがありませんから、灵能者は人狼が今までに何人死んだか、逆に言えばまだ何人の人狼が生き残っているかが正確に分かります。
         p 灵能者が活躍する場面は、たとえば占卜师が誰かに人狼判定を出した場合です。人狼判定が出された人は、その占卜师が本物かどうか分からなくても吊ってしまうことが多いです。これは<strong>灵能者とのラインを見る</strong>ためです。
-        p 例えば、占卜师Aが人狼判定を出した人を処刑して、次の日に灵能者Bが処刑された人に人狼判定を出したとします。このとき、占卜师Aと灵能者Bは<b>ラインが繋がった</b>といいます。逆に、例えば灵能者Bが村人判定を出した場合、占卜师Aと灵能者Bが両方とも本物であるという可能性は消えます。このとき、<b>割れた</b>とか<b>ラインが切れた</b>とかいいます。
+        p 例えば、占卜师Aが人狼判定を出した人を处刑して、次の日に灵能者Bが处刑された人に人狼判定を出したとします。このとき、占卜师Aと灵能者Bは<b>ラインが繋がった</b>といいます。逆に、例えば灵能者Bが村人判定を出した場合、占卜师Aと灵能者Bが両方とも本物であるという可能性は消えます。このとき、<b>割れた</b>とか<b>ラインが切れた</b>とかいいます。
         p また、占卜师Aと灵能者B、占卜师Cと灵能者Dがそれぞれラインが繋がった場合、「Aが本物ならばBも本物」「Cが本物ならばDも本物」、あるいはその逆が成り立ちそうだ（絶対とは言えません）ということが見えてきます。このようなことから真占いや真灵能を推理するためにラインは重要な情報です。
-        p とはいえ、実際には、灵能者はすぐ処刑されてしまうことも多いです。なぜかというと、やはり占卜师のほうが情報の重要度が高いとみなされるので、例えば灵能者が2人COした場合、どちらかが人狼の可能性が高いとして<strong>ローラー</strong>（COした人を全員処刑してしまうこと）が行われることも多いからです。この方法ならば偽者も確実に処刑できます。
+        p とはいえ、実際には、灵能者はすぐ处刑されてしまうことも多いです。なぜかというと、やはり占卜师のほうが情報の重要度が高いとみなされるので、例えば灵能者が2人COした場合、どちらかが人狼の可能性が高いとして<strong>ローラー</strong>（COした人を全员处刑してしまうこと）が行われることも多いからです。この方法ならば偽者も確実に处刑できます。
         section
           h4 COのタイミングについて
           p 灵能者がCOするタイミングは、色々パターンがありますが、初心者でよく分からないならば2日目に占卜师の後くらいにCOするのがよいでしょう。
@@ -79,13 +79,13 @@ section.manual.long
       h3 猎人
       details
         summary 猎人は人狼に襲われたくない人を守ります。基本はCOしてはいけません。
-        p <b>猎人</b>は、前述の通り人狼から村人を守る役職です。猎人の役目とはつまり、<strong>死んでほしくない人を確実に守ること</strong>です。
+        p <b>猎人</b>は、前述の通り人狼から村人を守る职业です。猎人の役目とはつまり、<strong>死んでほしくない人を確実に守ること</strong>です。
         p 人狼にとって、猎人はとても邪魔な存在です。殺したい人を殺せないかもしれないからです。また、GJ（Good Job: 猎人が护卫に成功すること）が起こると<strong>吊り回数</strong>が増えることがあり、そうすると人狼は不利になります。
-        p 吊り回数というのは、例えば現在10人のとき、処刑で1人、人狼に襲われて1人死ぬので1日で計2人死ぬと考え、これを「10→8→6→4→2」などと書きます。人狼が生き残ったまま残り2人になると負けですから、あと4回処刑を行うことができ、これを「吊り回数4回」であるといいます。
+        p 吊り回数というのは、例えば現在10人のとき、处刑で1人、人狼に襲われて1人死ぬので1日で計2人死ぬと考え、これを「10→8→6→4→2」などと書きます。人狼が生き残ったまま残り2人になると負けですから、あと4回处刑を行うことができ、これを「吊り回数4回」であるといいます。
         p そこで、10→8のところで猎人がGJしたと仮定しましょう。すると、10の次は9になります。すると「10→9→7→5→3→1」となります。すると、吊り回数は5回に増えていることがわかります。これを吊り回数が増えたといいます。
-        p さて、前述のように猎人は邪魔な存在ですから、人狼は猎人を是が非でも殺したいはずです。なので、猎人は基本<strong>COしてはいけません</strong>。猎人は自分を守ることはできないので、COしたらその日の夜にほぼ確実に殺されることでしょう。もし猎人がCOするとしても、終盤になってからですが、基本はCOしないものとみていいでしょう。
+        p さて、前述のように猎人は邪魔な存在ですから、人狼は猎人を是が非でも殺したいはずです。なので、猎人は基本<strong>COしてはいけません</strong>。猎人は自己を守ることはできないので、COしたらその日の夜にほぼ確実に殺されることでしょう。もし猎人がCOするとしても、終盤になってからですが、基本はCOしないものとみていいでしょう。
         p また、猎人がCOしないのにはもう一つ理由があります。猎人は人狼の噛みに対する抑止力ですから、猎人が死んだのがばれてしまったら人狼は自由に殺したい人を殺せます。これはまずい状況です。ですから、猎人は死んだ後も人狼に対して<b>プレッシャー</b>を与えつづける必要があるのです。猎人が死んだことを悟られてはいけないのです。
-        p ただし、終盤には人狼が猎人を騙ってくることがあります。そういうときもしこちらもまだ生き残っていたら、出たほうがよいでしょう。そういう場合は人狼も追い詰められていることも多く、人狼候補を2択に絞れることもあるからです。こういうときのために、猎人は<strong>猎人日記</strong>を用意しておくのが一般的です。これは、2日目以降について「誰を护卫したか」「誰が噛まれたか」を毎日記録しておくものです。これも、占卜师同様に理由があると望ましいでしょう。猎人の場合誰を护卫したかというのは、得にGJがあったときには重要な情報ですので、COしたからにはなるべく情報を村に与えるという観点からこれを発表することになります。他の村人たちも、これをみて猎人の真偽を判断したりします。
+        p ただし、終盤には人狼が猎人を騙ってくることがあります。そういうときもしこちらもまだ生き残っていたら、出たほうがよいでしょう。そういう場合は人狼も追い詰められていることも多く、人狼候補を2択に絞れることもあるからです。こういうときのために、猎人は<strong>猎人日記</strong>を用意しておくのが一般的です。これは、2日目以降について「誰を护卫したか」「誰が噛まれたか」を毎日記録しておくものです。これも、占卜师同样に理由があると望ましいでしょう。猎人の場合誰を护卫したかというのは、得にGJがあったときには重要な情報ですので、COしたからにはなるべく情報を村に与えるという観点からこれを発表することになります。他の村人たちも、これをみて猎人の真偽を判断したりします。
         p 猎人に守られた人は、その人が妖狐で呪殺でもされない限り、朝になったら死んでいることはありません。逆に言うと、わりとレアなケースですが、护卫していた人が朝死んでいたら、その人以外を呪殺したと主張する占卜师は偽であることが明らかになります。終盤の場合には、猎人なのにCOしてこれを指摘することが稀にあるかもしれません。こうすることで、その日の夜に猎人は噛まれるでしょうが、その場合誰が占卜师か分かるし、その占卜师が最低一日は生き残ります。
 
     section
@@ -93,8 +93,8 @@ section.manual.long
       details
         summary 共有者は村のまとめ役です。わりとみんな指示に従ってくれます。自信がなければ相方に任せましょう。
         p <b>共有者</b>は、基本的にCOすれば確定村人であると扱われます。共有者は2人を互いに把握して夜に会話できるので、互いに誰がもう一人の共有者か知っています。そのため、偽の共有者がCOしても、本物の共有者がそれを否定してもう一人の真共有者と互いに確認すれば、その人が偽であることがばれてしまいます。人外が共有者を騙るには人狼が2人出てきて騙る必要があり（狂人は人狼と互いに認識できないので共有を騙ることは難しい）、負担がたいへん大きく得策とはいえません。したがって、共有者はCOすれば確定村人になります。
-        p 共有者は確実に村人なので、村の<b>まとめ役</b>になることも多いです。初心者に負担が大きいと思うならば、夜のうちに相方に自分が初心者であると打ち明けて相方に指揮をとってもらいましょう。
-        p 共有者の役目は、基本的には<b>確定村人</b>を作る（COすれば確定村人を作ったことになる）ということです。もし共有者のほかに確定村人（占卜师全員に村人判定をもらうなど）があらわれた場合は、共有者の死後そちらが中心になって指揮をする場合もあります。
+        p 共有者は確実に村人なので、村の<b>まとめ役</b>になることも多いです。初心者に負担が大きいと思うならば、夜のうちに相方に自己が初心者であると打ち明けて相方に指揮をとってもらいましょう。
+        p 共有者の役目は、基本的には<b>確定村人</b>を作る（COすれば確定村人を作ったことになる）ということです。もし共有者のほかに確定村人（占卜师全员に村人判定をもらうなど）があらわれた場合は、共有者の死後そちらが中心になって指揮をする場合もあります。
         p ちなみに、共有者は最後まで生き残ることはあまりありません。なぜなら、<b>最終日</b>（吊り回数が残り1回の日）に数人が生き残って何択かになったとき、共有者がいると人狼候補から外れて人狼にとって不利なので、大抵はその前に人狼に教われてしまうからです。
         section
           h4 COについて
@@ -104,7 +104,7 @@ section.manual.long
             p 一人だけCOするということは、COした共有者は相方が誰であるか発表しないということです。この場合「共有CO 相方生存」などといってCOします。
             p 例えば共有者が1人か2人潜伏する場合は、<strong>共有トラップ</strong>が利用できます。これは、偽の占卜师が潜伏の共有者に対して<b>人狼判定</b>を出したならば、その共有者がCOすることでその場でその占卜师の破綻が確定するということです。
             p これにより偽の占卜师は誰かに人狼判定を出すことをためらい、人狼判定を出した占卜师の信用が少し高まることもあります。ただし、真の占卜师が共有者を占ってしまい無駄になる（占わなくても村人であることがはっきりしているから）かもしれないというデメリットもあります。
-            p 逆にFOの利点は無駄占いがないということと、<b>グレラン</b>（後述）でも共有者が吊られないということです。
+            p 逆にFOの利点は無駄占いがないということと、<b>グレラン</b>（后述）でも共有者が吊られないということです。
         section
           h4 指定について
           p 共有者は確定村人なので、その信頼をいかして「指定吊り」を行うことがあります。これは、「今日は××さんに投票してください」と指定することです。これにより、共有者が1人しかCOしていなくても、もう一人の共有者が吊られるのを避けることができます。
@@ -112,14 +112,14 @@ section.manual.long
 
     section
       h2 人狼阵营
-      p 次に人狼阵营です。人狼阵营は嘘をつくことができるので、人狼におけるゲームメイカーであるといえるでしょう。
-      p 人狼阵营がどんな戦術を用いてくるかによってゲーム展開が変わります。
-      p 人狼阵营の目標は、処刑や噛みを用いて村人を減らし、人狼が全滅しないことです。具体的には、村人の数が人狼の数以下になると胜利です。
+      p 次に人狼阵营です。人狼阵营は嘘をつくことができるので、人狼における游戏メイカーであるといえるでしょう。
+      p 人狼阵营がどんな戦術を用いてくるかによって游戏展開が変わります。
+      p 人狼阵营の目標は、处刑や噛みを用いて村人を減らし、人狼が全滅しないことです。具体的には、村人の数が人狼の数以下になると胜利です。
 
       section
         h3 人狼
-        p <b>人狼</b>は、共有者と同様に夜に話し合いをすることができます。話し合いは、他の人に「狼的远吠」として届くので、内容は分かりませんが发言の数は分かります。ですから、LWになったときなど、それを悟らせないために一人で多く发言したりしてごまかしたり、あるいはその逆もあります。
-        p 人狼は全員で話し合って、夜に一人襲うことができます。初心者ならば、やはり他の人に初心者であると伝えて、噛み先（誰を襲うか）を決めてもらったり戦術をアドバイスしてもらったりしましょう。
+        p <b>人狼</b>は、共有者と同样に夜に話し合いをすることができます。話し合いは、他の人に「狼的远吠」として届くので、内容は分かりませんが发言の数は分かります。ですから、LWになったときなど、それを悟らせないために一人で多く发言したりしてごまかしたり、あるいはその逆もあります。
+        p 人狼は全员で話し合って、夜に一人襲うことができます。初心者ならば、やはり他の人に初心者であると伝えて、噛み先（誰を襲うか）を決めてもらったり戦術をアドバイスしてもらったりしましょう。
         section
           h4 噛みについて
           details
@@ -137,10 +137,10 @@ section.manual.long
           details
             summary 灵能騙りがありがちですが、占卜师を騙ってもいいです。潜伏も選択肢の1つです。
             p 人狼阵营の人は<b>騙る</b>（他的职业になりすましてCOしたり结果を発表したりする）ことができます。これがないと村人有利に進んでしまうので、基本的に何かを騙ることになります。
-            p とはいっても、人狼が全員騙りに出るのは危険であり、そういうのは一般に奇策とみなされます。最低でも一人は潜伏しているのがよいでしょう。人狼の場合には、何かを騙る場合と全潜伏の場合もあります。全潜伏の場合は、騙るのは狂人（後述）に任せるということになります。
+            p とはいっても、人狼が全员騙りに出るのは危険であり、そういうのは一般に奇策とみなされます。最低でも一人は潜伏しているのがよいでしょう。人狼の場合には、何かを騙る場合と全潜伏の場合もあります。全潜伏の場合は、騙るのは狂人（后述）に任せるということになります。
             p 人狼がよく騙るのは<strong>灵能者</strong>です。人狼はそもそも誰が人狼か把握していますから、本物の灵能者と同じ结果を出すことも可能です。ただし、灵能者はローラーされやすいという欠点があります。
             p 狂人が占卜师を騙っている場合、人狼に対して村人判定を出したり、逆に村人に対して人狼判定を出した場合は人狼からみてその占卜师が偽だということがわかり、多くの場合同時に真占卜师が誰かも分かります。
-            p そこで、偽の占卜师とラインを繋いで偽占卜师を守ったり、あるいはあえて本物の占卜师とラインをつないで自分を守ったりできます。
+            p そこで、偽の占卜师とラインを繋いで偽占卜师を守ったり、あるいはあえて本物の占卜师とラインをつないで自己を守ったりできます。
             p ただし、人狼が占卜师を騙ることもわりとあります。
             p まあ初心者の場合は、何かを騙る自信がなかったら潜伏するのがよいでしょう。
 
@@ -150,18 +150,18 @@ section.manual.long
           summary 狂人はまず騙るのが普通です。何か騙ってみましょう。場合によっては吊られるのも役目です。
           p <b>狂人</b>は、村人であるにもかかわらず人狼の味方です。
           p 村人であるということは、胜利判定のときも村人侧で見るし、占卜师や灵能者からみても村人だということです。
-          p 狂人の役目は、<strong>何かを騙って村を混乱させること</strong>です。つまり、騙るのが役目だといっていいでしょう。性質上、占卜师や灵能者などについても把握している必要があり難しい役職です。初心者ならば、占卜师あたりを騙るのが無難でしょう。
+          p 狂人の役目は、<strong>何かを騙って村を混乱させること</strong>です。つまり、騙るのが役目だといっていいでしょう。性質上、占卜师や灵能者などについても把握している必要があり難しい职业です。初心者ならば、占卜师あたりを騙るのが無難でしょう。
           section
             h4 騙りについて
             details
-              summary 占卜师を騙ると<b>狂アピ</b>（人狼に対して自分が狂人であるとアピールすること）がしやすいです。
+              summary 占卜师を騙ると<b>狂アピ</b>（人狼に対して自己が狂人であるとアピールすること）がしやすいです。
               p 狂人の騙りは<strong>占卜师</strong>が一般的です。狂人と人狼の騙り方の違いに大きく影響を与えるのは、狂人は人狼を把握できないということです。人狼も最初は狂人を把握できませんが、狂人の動きによっては人狼から把握できることもあります。
-              p 狂人は、人狼に対して自分が狂人であることを知らせることができればいいのですが、それをするには占卜师のほうがやりやすいです。
+              p 狂人は、人狼に対して自己が狂人であることを知らせることができればいいのですが、それをするには占卜师のほうがやりやすいです。
               p また、狂人の役目は<strong>吊りを無駄に消費させること</strong>とか、<strong>本物を巻き添えにして死ぬこと</strong>であると言うこともあります。つまり、たとえば狂人が占卜师を騙り誰かに人狼判定を出したとしましょう。それでその人が吊られれば一つ吊りが消費されました（まれに本当に人狼に人狼判定を出してしまうこともありますが）。その後灵能者とラインが繋がらず、偽であるということがバレてしまったら大抵は吊られるでしょう。これで狂人は吊りを2つ消費させ、2回分人狼を守ったことになります。また、ニセとバレなければ、本物の占卜师が誰か分からなくなるため人狼に有利になります。
               p 本物を巻き添えにするというのは、例えば占いローラーや、灵能を騙る場合は灵能ローラーに持ち込めば、本物も一緒に吊ることができ、最低2回は吊りを無駄にさせることができました。
               p また、同じ意味で<strong>狂人は噛まれるべきではない</strong>ともいいます。人狼は、狂人はほっといてもかってに吊られてくれるから、それよりは他の村人阵营の人を噛んだほう得です。言い換えると、狂人を噛んでしまうと損なのです。
               p 初心者の場合は、占卜师を騙って適当なところに村人判定をだし、適当なところで人狼判定を出してみるといいでしょう。
-              p ただし、これは人狼の騙りにも言えることですが、<strong>破綻</strong>には気をつけて下さい。たとえば破綻の例としては、あまり村人判定を出しすぎると、人狼候補が1人もいなくなってしまい矛盾することがあります（ゲームが続いている限りまだ人狼は1人以上生き残っているため）。こうなると破綻です。破綻しても吊られることはできますが、真占卜师を確定させてしまうことがあるので避けたほうがよいでしょう。
+              p ただし、これは人狼の騙りにも言えることですが、<strong>破綻</strong>には気をつけて下さい。たとえば破綻の例としては、あまり村人判定を出しすぎると、人狼候補が1人もいなくなってしまい矛盾することがあります（游戏が続いている限りまだ人狼は1人以上生き残っているため）。こうなると破綻です。破綻しても吊られることはできますが、真占卜师を確定させてしまうことがあるので避けたほうがよいでしょう。
 
     section
       h2 妖狐阵营
@@ -171,10 +171,10 @@ section.manual.long
         details
           summary 吊られず占われず噛まれず、ひっそりと生き残り続けましょう。いっそのこと騙るのも手です。
           p <b>妖狐</b>は、基本的に一人しかいません。つまり村の中に誰も仲間がいないということです。
-          p 妖狐の目的は、<strong>ゲーム终了まで生き残る</strong>ことです。妖狐は占われると<strong>呪殺</strong>されてしまうので、<strong>占われてはいけない</strong>のです。
+          p 妖狐の目的は、<strong>游戏终了まで生き残る</strong>ことです。妖狐は占われると<strong>呪殺</strong>されてしまうので、<strong>占われてはいけない</strong>のです。
           p また、当然<strong>吊られてもいけません</strong>。そして、妖狐を殺そうとしてくるのは<b>村人阵营</b>だけではありません。<b>人狼阵营</b>も妖狐が生存していては勝てないので、人狼たちも殺そうとしてきます。
-          p 妖狐は人狼に襲われても死にません。しかし、人狼に襲われると、猎人のGJ同様に次の日に朝の死体がないので人狼は不審に思います。人狼に妖狐であることがばれてしまうかもしれません。
-          p ばれてしまうと、占いを騙っている人狼が妖狐に対して人狼判定を出してきたり、あるいは人狼がなんと人狼COして妖狐を全員に発表する（当然人狼も処刑されてしまう捨て身の方法です）という<strong>告発</strong>をされてしまうことがあります。
+          p 妖狐は人狼に襲われても死にません。しかし、人狼に襲われると、猎人のGJ同样に次の日に朝の死体がないので人狼は不審に思います。人狼に妖狐であることがばれてしまうかもしれません。
+          p ばれてしまうと、占いを騙っている人狼が妖狐に対して人狼判定を出してきたり、あるいは人狼がなんと人狼COして妖狐を全员に発表する（当然人狼も处刑されてしまう捨て身の方法です）という<strong>告発</strong>をされてしまうことがあります。
           p ですからなるべく<strong>噛まれないほうがいい</strong>ということです。この、吊られず噛まれず占われずというのはとても難しく、妖狐の勝率は低いです。その反面、勝てたら楽しいです。
           section
             h4 騙りについて
@@ -197,7 +197,7 @@ section.manual.long
         dt グレラン
         dd グレーランダムのこと。グレーの中から好きな人に投票すること。派生語で「占いラン」などもある。
         dt ローラー
-        dd ある役職をCOした人を順番に全員処刑すること。「占いローラー」や「灵能ローラー」といって使う。本物を犠牲にして、人外を確実に排除できるという利点がある。
+        dd ある职业をCOした人を順番に全员处刑すること。「占いローラー」や「灵能ローラー」といって使う。本物を犠牲にして、人外を確実に排除できるという利点がある。
         dt 2-1,2-2など
         dd 「2-1」という場合、「占卜师が2人、灵能者が1人COした状态」を指す。「2-2」の場合、占卜师が2人、灵能者も2人。
         dt 「真狂-真」など
