--- a/manual/play-owner.jade
+++ b/manual/play-owner.jade
@@ -7,11 +7,11 @@ section.manual
   p <a href="/rooms">房间一览</a>のページの下のほうに<a href="/newroom">新しい房间</a>という項目があるので開くと、新しい房间の設定ページが開きます。
   h3 部屋の設定を入力する
   p 「房间の名字」には、新しく作る部屋の名字を入力します。
-  p 「密码」にチェックを入れて密码を入力すると、その密码を入力しないと入室できない部屋になります。内輪村をやりたいときに便利です。誰でも入れる部屋にする場合は「密码」のチェックは入れません。<strong>房间加密の部屋にしても、终了後は全員に公開されます</strong>。個人情報などは部屋に載せないようにしてください。
+  p 「密码」にチェックを入れて密码を入力すると、その密码を入力しないと入室できない部屋になります。内輪村をやりたいときに便利です。誰でも入れる部屋にする場合は「密码」のチェックは入れません。<strong>房间加密の部屋にしても、终了後は全员に公開されます</strong>。個人情報などは部屋に載せないようにしてください。
   p 「コメント」には、部屋一览に表示されるコメントを入力します。なくても構いません。
-  p 「人数」は<strong>最大人数</strong>です。その数まで集まらなくてもゲームは開始できます。ただし、最低4人必要です。
+  p 「人数」は<strong>最大人数</strong>です。その数まで集まらなくても游戏は開始できます。ただし、最低4人必要です。
   p 「匿名模式」は、ありにすると<strong>入室時に名字を决定し、参加者のユーザーIDが隠されます</strong>。誰が誰か分からない状态で人狼をプレイできます。逆になしにした場合は、ユーザーIDが公開され、あらかじめ登録した名字で参加するので、誰が誰か分かります。
-  p 「GM」は、ありにすると<strong>オーナーがGMになります</strong>。GM（游戏管理员）は、加入游戏しません。ゲーム中は常に全員的职业と发言を確認でき、全員または個人個人に対してメッセージを送ることができます。
+  p 「GM」は、ありにすると<strong>オーナーがGMになります</strong>。GM（游戏管理员）は、加入游戏しません。游戏中は常に全员的职业と发言を確認でき、全员または個人個人に対してメッセージを送ることができます。
   h3 部屋を作成する
   p 其他の設定は、部屋を作った後に行います。
   p 以上の設定が終わったら、「作成」ボタンを押して部屋を作成しましょう。ボタンを押すと部屋が作成され、オーナーは自動的に新しい部屋へ移動します。
@@ -26,30 +26,30 @@ section.manual
   p 「展开游戏开始界面」ボタンを押すと、规则設定画面が出現します（最初から出ているときもあります）。
   p
     img(src="/images/manual-play-owner-3.png",alt="规则設定画面")
-  p 规则を設定した後、一番下の「開始」ボタンを押すとゲームを開始します。
-  p 「现在的人数:」の行には、現在の参加者の人数と、この人数における<b>配役</b>（各役職の人数）が表示されています。
-  p 配役を変更するには、その下の「役職」というセレクトボックスを変更します。
-  p 配役には、一般的な人狼の配役である「普通1」や「普通2」「普通3」をはじめとして、特殊な役職が利用可能な人狼を楽しめるように設定された特殊な配役がいくつか利用できます。
+  p 规则を設定した後、一番下の「開始」ボタンを押すと游戏を開始します。
+  p 「现在的人数:」の行には、現在の参加者の人数と、この人数における<b>配役</b>（各职业の人数）が表示されています。
+  p 配役を変更するには、その下の「职业」というセレクトボックスを変更します。
+  p 配役には、一般的な人狼の配役である「普通1」や「普通2」「普通3」をはじめとして、特殊な职业が利用可能な人狼を楽しめるように設定された特殊な配役がいくつか利用できます。
   h4 自由配役
-  p 下のほうの<b>特殊规则</b>にある<strong>自由配役</strong>を選択すると、配役を全て自由に决定できます。自由配役を選択すると、月下人狼の全て的职业について、役職数選択フォームが出現します。
+  p 下のほうの<b>特殊规则</b>にある<strong>自由配役</strong>を選択すると、配役を全て自由に决定できます。自由配役を選択すると、月下人狼の全て的职业について、职业数選択フォームが出現します。
   p 村人の数は、参加者の数から他的职业の数を差し引いた数になります。村人の数がマイナスになってしまう場合は参加者が足りませんので、その配役ではスタートできません。
   h4 黑暗火锅
   p また、<strong>黑暗火锅</strong>は、配役がランダムで決まるモードです。黑暗火锅を選択すると「黑暗火锅选项」が出現します。
   p 黑暗火锅で人狼が一人もいなかったら困るので、黑暗火锅选项では人狼の数だけは設定できます。人数にあわせて適当に設定しましょう。また、妖孤の数も設定できます。
-  p その下のセレクトボックスは、配役を公開するかどうかの設定です。「役職一览を公開」では、ゲーム開始後にランダムで設定された配役がすべて公開され、「规则」ボタンで参照できます。「阵营ごとの数のみ公開」では、村人阵营、人狼阵营（人狼及び狂人など）、妖孤阵营などの数がそれぞれ公開されます。「役職一览も非公開」にすると配役に関する情報はなくなります。
+  p その下のセレクトボックスは、配役を公開するかどうかの設定です。「职业一览を公開」では、游戏開始後にランダムで設定された配役がすべて公開され、「规则」ボタンで参照できます。「阵营ごとの数のみ公開」では、村人阵营、人狼阵营（人狼及び狂人など）、妖孤阵营などの数がそれぞれ公開されます。「职业一览も非公開」にすると配役に関する情報はなくなります。
   h4 追加要素の設定
   p その下の「决定者」「权力者」「死亡笔记」「狼的仆从」「酒鬼」のチェックボックスは、チェックするとその追加要素を使用します。いずれも一般的な人狼では使用されません。
   dl
     dt 决定者
-    dd 参加者の一人が「决定者」に選ばれます（本人にも分かりません）。昼の処刑投票で同数になった場合、决定者が投票したほうが処刑されます。
+    dd 参加者の一人が「决定者」に選ばれます（本人にも分かりません）。昼の处刑投票で同数になった場合、决定者が投票したほうが处刑されます。
     dt 权力者
-    dd 参加者の一人が「权力者」に選ばれます（本人にも分かりません）。昼の処刑投票で、权力者の投票は2票分として数えられます。
+    dd 参加者の一人が「权力者」に選ばれます（本人にも分かりません）。昼の处刑投票で、权力者の投票は2票分として数えられます。
     dt 死亡笔记
     dd 毎夜、参加者の一人に死亡笔记（死亡笔记）が届きます。死亡笔记を持っている人は、生存者の中から誰か一人を殺せます。
     dt 狼的仆从
-    dd 一日目の夜、人狼チームの一人に、他の参加者の中から狼的仆从を選択する権利が与えられます。 狼的仆从に選ばれた人は、能力はそのままで人狼側になります。つまり人狼阵营的胜利に、胜利条件が変わります。
+    dd 一日目の夜、人狼チームの一人に、他の参加者の中から狼的仆从を選択する権利が与えられます。 狼的仆从に選ばれた人は、能力はそのままで人狼侧になります。つまり人狼阵营的胜利に、胜利条件が変わります。
     dt 酒鬼
-    dd 参加者の一人が「酒鬼」になります。酒鬼は、2日目の夜までは自分的职业が「村人」だと思い込んでおり、占卜师などのように能力を持っていても発動できません。3日目になると目覚めます。
+    dd 参加者の一人が「酒鬼」になります。酒鬼は、2日目の夜までは自己的职业が「村人」だと思い込んでおり、占卜师などのように能力を持っていても発動できません。3日目になると目覚めます。
 
   h3 规则を設定する
   p 次の「规则」の欄では種々の规则を設定できます。
@@ -60,23 +60,23 @@ section.manual
   p 「参加者が死ぬ」に設定すると、替身君を使用せず、参加者の誰かが初日から死ぬことになります。
   p 「誰も死なない」は、替身君は使わないが、その代わりに一日目の夜は人狼が襲わないようにする設定です。结果的には「替身君が死ぬ」とそこまで変わりませんが、替身君を使う設定のほうが一般的です。
 
-  h4 時間の設定
-  p その次の「昼」「夜」「犹豫」は時間設定です。
-  p 「昼」は、昼の話し合いの時間です。この時間の間に話し合いと投票をします。
-  p 「夜」は、夜に人狼たちが会話する時間です。この間に占卜师など的职业も能力の対象を選びます。
-  p 「犹豫」は、昼や夜の時間が終わった後に投票や能力対象の選択をする犹豫時間です。これを0にすると犹豫なしになります。犹豫時間は、会話はできません。
+  h4 时间の設定
+  p その次の「昼」「夜」「犹豫」は时间設定です。
+  p 「昼」は、昼の話し合いの时间です。この时间の間に話し合いと投票をします。
+  p 「夜」は、夜に人狼たちが会話する时间です。この間に占卜师など的职业も能力の対象を選びます。
+  p 「犹豫」は、昼や夜の时间が終わった後に投票や能力対象の選択をする犹豫时间です。これを0にすると犹豫なしになります。犹豫时间は、会話はできません。
 
   h4 其他の設定
   p その下にあるのは、其他の細かい設定です。一般的な人狼を楽しみたければ、全部そのままで構いません。細かいこだわりがある場合に変更して下さい。
-  p 各設定の説明は、マウスを乗せると表示されます。また、使用する役職によって設定項目が増えたり減ったりします。
-  h2 ゲームを開始する
+  p 各設定の説明は、マウスを乗せると表示されます。また、使用する职业によって設定項目が増えたり減ったりします。
+  h2 游戏を開始する
   p
-    img(src="/images/manual-play-owner-2.png",alt="全員が[ready]をつけた状态")
-  p 設定が終わったらいよいよゲームを開始します。
-  p 各参加者（オーナーも含む）が<b>准备/取消准备</b>ボタンを押すと、名字の下に<b>[ready]</b>というマークがつきます。このマークがつくと、その人はゲーム開始の準備ができたということです。もう一度ボタンを押すと消えます。上の画像のように部屋に入っている人全員が<b>[ready]</b>をつけると、「開始」ボタンを押してゲーム開始できます。
+    img(src="/images/manual-play-owner-2.png",alt="全员が[ready]をつけた状态")
+  p 設定が終わったらいよいよ游戏を開始します。
+  p 各参加者（オーナーも含む）が<b>准备/取消准备</b>ボタンを押すと、名字の下に<b>[ready]</b>というマークがつきます。このマークがつくと、その人は游戏開始の準備ができたということです。もう一度ボタンを押すと消えます。上の画像のように部屋に入っている人全员が<b>[ready]</b>をつけると、「開始」ボタンを押して游戏開始できます。
   p 部屋に入ったくせに<b>[ready]</b>をつけない人は、「将参加者踢出游戏」ボタンを押して部屋から踢出ことができます。
   p また、参加者が少ないとかでその部屋で人狼ができない場合は、「废弃这个房间」ボタンを押すことで部屋を廃村処理できます。人狼をプレイしない部屋は廃村にして终了して下さい。
 
-  h2 ゲームが始まったら
-  p <a href="play-game">ゲーム中の流れ</a>を参照して下さい。
+  h2 游戏が始まったら
+  p <a href="play-game">游戏中の流れ</a>を参照して下さい。
 
