--- a/manual/prohibited.jade
+++ b/manual/prohibited.jade
@@ -1,38 +1,38 @@
 section.manual
   p: a(href="/manual") 返回
   h1 禁止行為・注意事項
-  p 以下の行為は、人狼のゲーム進行を妨げるため<strong>禁止</strong>です。
+  p 以下の行為は、人狼の游戏進行を妨げるため<strong>禁止</strong>です。
   p 悪質な禁止行為を行った場合、アクセス禁止などの処置を取る場合があります。
   dl
     dt 利敵行為
     dd
-      p 利敵行為とは、いわゆる<b>リア狂</b>・<b>村騙り</b>など、自分の阵营を故意に不利にする行為を指します。
+      p 利敵行為とは、いわゆる<b>リア狂</b>・<b>村騙り</b>など、自己の阵营を故意に不利にする行為を指します。
       p これらの行為は味方に迷惑をかけたり、推理を狂わせたりするため禁止です。
-      p ただし、事前に参加者全員に確認して全員が同意した場合に限り、村騙りを認めるローカル规则（後述）を設けることができます。
-      p: small ※自分の阵营を一切不利にしない村騙りは容認されます。例えば最終日のPP時に村人が人狼を騙ることは、味方の推理を狂わせることも自分の阵营を不利にすることがないので、禁止されません。
+      p ただし、事前に参加者全员に確認して全员が同意した場合に限り、村騙りを認めるローカル规则（后述）を設けることができます。
+      p: small ※自己の阵营を一切不利にしない村騙りは容認されます。例えば最終日のPP時に村人が人狼を騙ることは、味方の推理を狂わせることも自己の阵营を不利にすることがないので、禁止されません。
     
     dt 故意の突然死
     dd
-      p 自阵营を有利にさせる・ゲームを乱すなどの目的で<em>故意に突然死すること</em>を指します。
-      p 故意かどうかに限らず突然死が起きるとゲームの展開が大きく乱れるので、特に悪質性の高い故意の突然死は禁止です。
+      p 自阵营を有利にさせる・游戏を乱すなどの目的で<em>故意に突然死すること</em>を指します。
+      p 故意かどうかに限らず突然死が起きると游戏の展開が大きく乱れるので、特に悪質性の高い故意の突然死は禁止です。
       p なお、故意でない突然死も、過度に繰り返した場合アクセス禁止処置となる場合があるのでご注意ください。
     dt 部屋の掛け持ち
     dd
       p 2つ以上の部屋に同時に参加することを指します。
       p 複数の部屋に同時に参加する場合、思考や发言が疎かになり推理を乱したり味方に迷惑をかけたりすることにつながるため、部屋の掛け持ちは禁止です。
       p したがって、一方の部屋で死亡して観戦するだけになった場合に、その部屋の终了前に他の部屋に参加することは禁止しませんが、マナー違反となる場合があるので注意してください。
-    dt 外部でゲームについて話す行為
+    dt 外部で游戏について話す行為
     dd
-      p ゲームに関係する情報を人狼の部屋以外で他の参加者に伝える行為を指します。
-      p 参加者全員に公開されていない情報（自分的职业など）を伝えることは、推理が狂うほか不当な有利不利が発生するので禁止です。
-      p また、部屋以外で話された内容は参加者の全員が知ることができない可能性があるので、推理を乱すことにつながるため禁止です。
+      p 游戏に関係する情報を人狼の部屋以外で他の参加者に伝える行為を指します。
+      p 参加者全员に公開されていない情報（自己的职业など）を伝えることは、推理が狂うほか不当な有利不利が発生するので禁止です。
+      p また、部屋以外で話された内容は参加者の全员が知ることができない可能性があるので、推理を乱すことにつながるため禁止です。
       p 直接参加者に伝える行為だけでなく、SNS等他の参加者が閲覧可能な場所で公開することも禁止です。
-      p ただし、参加者全員が情報を共有できる場合に限り、部屋のチャットを代替する別の外部手段を用いて昼の議論を行うことは認められます。
-    dt 其他、人狼のゲーム進行を著しく妨害する行為
+      p ただし、参加者全员が情報を共有できる場合に限り、部屋のチャットを代替する別の外部手段を用いて昼の議論を行うことは認められます。
+    dt 其他、人狼の游戏進行を著しく妨害する行為
     dd
       p 上の行為の他にも、人狼の正常な進行が不可能になるような行為を行った場合はアクセス禁止などの処置を取る場合があります。
 
-  p また、以下の行為も、利用者を不快にさせるため<strong>禁止</strong>です。これも同様にアクセス禁止などの処置を取る場合があります。
+  p また、以下の行為も、利用者を不快にさせるため<strong>禁止</strong>です。これも同样にアクセス禁止などの処置を取る場合があります。
   dl
     dt 不適切な发言・画像
     dd
@@ -45,7 +45,7 @@ section.manual
 
   h2 ローカル规则について
   p 部屋には自由にローカル规则を設けることができます。ローカル规则とは、上に定められた以外にその部屋にのみ特別に適用される禁止行為あるいは行動規程を指します。ただし、上記の禁止行為規定に反する规则は設けられません。
-  p ローカル规则は、<strong>ゲーム開始前に参加者全員に周知され、了解を得ていること</strong>が必要です。ローカル规则の内容は部屋の参加者で合議のうえ決めることができますが、最終的には部屋のオーナーが定めるものとし、ローカル规则に反対する参加者を部屋から追い出すことは認められます。
+  p ローカル规则は、<strong>游戏開始前に参加者全员に周知され、了解を得ていること</strong>が必要です。ローカル规则の内容は部屋の参加者で合議のうえ決めることができますが、最終的には部屋のオーナーが定めるものとし、ローカル规则に反対する参加者を部屋から追い出すことは認められます。
   
   h2 注意事項
   p 以下の行為は<strong>このサーバーでは禁止されません</strong>が、部屋のローカル规则として禁止することは認められます。
@@ -60,6 +60,6 @@ section.manual
       p: small ※騙りがシステムメッセージと同じ文面で发言することも可能なので、禁止行為ではありません。
     dt 初心者CO
     dd
-      p 初心者COとは、特にゲーム中の昼において、自分が初心者であると公言することを指します。
+      p 初心者COとは、特に游戏中の昼において、自己が初心者であると公言することを指します。
       p 初心者であると公言した場合、「その人が嘘をついている確率は低いだろう」などの印象が生まれ、推理に支障をきたすかもしれないので嫌われることがあります。
-      p: small ※特にゲームの進行を妨げるものではないので、禁止行為ではありません。
+      p: small ※特に游戏の進行を妨げるものではないので、禁止行為ではありません。
