--- a/manual/welcome2.jade
+++ b/manual/welcome2.jade
@@ -6,79 +6,79 @@ section.manual.long
 
   section
     h2 進行について
-    p 占卜师の占卜结果に注目してゲームの展開が決まることがあります。大きく分けて2種類あります。
+    p 占卜师の占卜结果に注目して游戏の展開が決まることがあります。大きく分けて2種類あります。
     section
       h3 黒進行
       p <strong>黒進行</strong>とは、特に2日目の朝にいきなり、<strong>占卜师</strong>の誰かが<b>黒</b>（人狼判定）を出した場合です。
-      p この場合、黒を出された人を処刑することが多いです。その目的は、<strong>灵能者</strong>の反応を確かめることです。
-      p つまり、黒を出した占卜师と灵能者の<strong>ライン</strong>を見ることです。処刑された人にたいして灵能者が<b>黒</b>を出せばラインが繋がったことになるし、逆に<b>白</b>を出せばラインが切れたことになります。
+      p この場合、黒を出された人を处刑することが多いです。その目的は、<strong>灵能者</strong>の反応を確かめることです。
+      p つまり、黒を出した占卜师と灵能者の<strong>ライン</strong>を見ることです。处刑された人にたいして灵能者が<b>黒</b>を出せばラインが繋がったことになるし、逆に<b>白</b>を出せばラインが切れたことになります。
       p 例えば灵能者が2人COして2人とも黒判定を出した場合などは、その2人のどちらかが真（本物）灵能である可能性は高いですから、その占卜师の信用が高まることになります。
       section
         h4 COについて
         p 占卜师が黒を出した場合、灵能者、場合によっては対抗の占卜师も<b>潜伏</b>（COせずに村人に混ざっていること）することがあります。
-        p これは、COしてしまうと人狼に狙われる可能性があり、また役職（<small>村人以外的职业をもつ人を総称して役職と呼ぶことがあります</small>）が2人以上いることになるため<b>猎人</b>の护卫先がぶれるためです。すなわち、占卜师以外がCOしなければ猎人の护卫先は1択であり、人狼はグレーを狙うか、あるいは博打に出てその占卜师を狙うかしかないわけです。
+        p これは、COしてしまうと人狼に狙われる可能性があり、また职业（<small>村人以外的职业をもつ人を総称して职业と呼ぶことがあります</small>）が2人以上いることになるため<b>猎人</b>の护卫先がぶれるためです。すなわち、占卜师以外がCOしなければ猎人の护卫先は1択であり、人狼はグレーを狙うか、あるいは博打に出てその占卜师を狙うかしかないわけです。
         p 逆に白進行のときに灵能者がCOする場合は、グレランで吊られることを避けるためです。
         p ちなみに、この時点で人狼から見れば、占卜师が真であるか偽であるかはほぼ判明しています。つまり、黒を出されたのが本当に人狼ならば真占卜师である可能性が高いし、人狼以外に黒が出されていれば偽者です。また、そもそも人狼が占い騙りに出ているという場合もあるでしょう。
         p ただし、<b>狂人</b>の<b>誤爆</b>（騙り占卜师なのに、人狼に対して偶然黒を出すこと）である場合もたまにあります。上で「ほぼ」とか「可能性」と述べたのはそのためです。
         p また、人狼が人狼に対して黒判定を出す戦術は<b>身内切り</b>と呼ばれます。主に灵能者とラインを繋ぐことなどが目的になります。
-        p 黒を出された人がCOする場合もあります。村人は嘘をつけないため、黒を出された人が何かCOした時点で残る可能性は、偽占いが本当に役職に対して黒を出した場合と、黒を出された人狼が処刑を避けるためにCOする場合や、狂人に黒が出された場合も混乱させるために何かCOするという場合もあるでしょう。
+        p 黒を出された人がCOする場合もあります。村人は嘘をつけないため、黒を出された人が何かCOした時点で残る可能性は、偽占いが本当に职业に対して黒を出した場合と、黒を出された人狼が处刑を避けるためにCOする場合や、狂人に黒が出された場合も混乱させるために何かCOするという場合もあるでしょう。
 
     section
       h3 白進行
       p <strong>白進行</strong>とは、黒進行とは逆に、占卜师が誰も黒を出さず、<b>白</b>（村人判定）しか出していない状态です。
-      p この状态では特に、誰が人狼である可能性が高いということもないので、CO数を見て<strong>グレラン</strong>や<strong>灵能ローラー</strong>（詳しくは後述）が行われることが多いです。
-      p 白進行であるということは、占卜师が全員COしきってしまったけど黒が出ないということですから、だいたいは占卜师は全て2日目昼にCOしてしまいます。人狼に狙われるのを防ぐためにあえて占卜师が潜伏するという戦術もないとは言えませんが、グレランで吊られる可能性があるなどリスクもあります。
+      p この状态では特に、誰が人狼である可能性が高いということもないので、CO数を見て<strong>グレラン</strong>や<strong>灵能ローラー</strong>（詳しくは后述）が行われることが多いです。
+      p 白進行であるということは、占卜师が全员COしきってしまったけど黒が出ないということですから、だいたいは占卜师は全て2日目昼にCOしてしまいます。人狼に狙われるのを防ぐためにあえて占卜师が潜伏するという戦術もないとは言えませんが、グレランで吊られる可能性があるなどリスクもあります。
       p 灵能者についても、グレランで吊られないためにCOしてしまう場合があります。
-      p 基本的に白進行ならば、対抗（自分と同じ役職を名乗る人）が出たら自分もCOしてしまって問題ないでしょう。
+      p 基本的に白進行ならば、対抗（自己と同じ职业を名乗る人）が出たら自己もCOしてしまって問題ないでしょう。
       section
         h4 猎人の护卫先について
-        p 黒進行とは違い、この場合役職が複数COする場合が多く、护卫先に迷います。
+        p 黒進行とは違い、この場合职业が複数COする場合が多く、护卫先に迷います。
         p 死んでほしくないところを守りましょう。
         p どちらかというと占卜师の情報のほうが重要なので占卜师を守る場合がありますが、裏をかいて灵能者を守ってみたり、あとは白進行で灵能がCOしてしまった後に占卜师が黒を出した場合、灵能による判定が重要なので灵能者を守りにいったりもします。
 
   section
     h2 CO数について
-    p ど的职业がどれだけCOしたかによってその後のゲーム展開も変わってきます。
+    p ど的职业がどれだけCOしたかによってその後の游戏展開も変わってきます。
     p 一般に、狂人は潜伏することはなく何かを騙ります。
-    p 人狼は騙る場合も騙らない場合もありますが、騙る場合は最低1人は潜伏するのが一般的です。これは、全員騙るのはリスクが高いからです。
+    p 人狼は騙る場合も騙らない場合もありますが、騙る場合は最低1人は潜伏するのが一般的です。これは、全员騙るのはリスクが高いからです。
   
     p 以下では一般的な場合における例を説明します。
     section
       h3 2-2
       p <b>2-2</b>とは、占卜师が2人、灵能者も2人COした形です。
       p 人狼が2人しかいないならば、<b>真狂-真狼</b>（占卜师に本物と狂人がいて、灵能者には本物と人狼がいる形）または<b>真狼-真狂</b>（占卜师に本物と人狼がいて、灵能者に本物と狂人がいる形）があります。
-      p もっと参加人数が多くて人狼が3人の場合は、人狼が2人騙ることが不可能ではないので<b>真狼-真狼</b>や<b>狂狼-真狼</b>、<b>真狼-狂狼</b>などもありますが、これらは確率が低めです。なぜなら、この3つはいずれの場合も何らかの<strong>欠け</strong>が起こっているからです。欠けとは、<b>初日犠牲者</b>（替身君）に何らか的职业（村人以外）が割り当てられることです。この場合2日目昼の時点で死んでいるので、全員がCOし終わっても本物がいないということが起こり得ます。1つ目は狂人がCOしていないので狂人欠け、2つ目は真占卜师がいないので占卜师欠け、3つ目は灵能者欠けです。
+      p もっと参加人数が多くて人狼が3人の場合は、人狼が2人騙ることが不可能ではないので<b>真狼-真狼</b>や<b>狂狼-真狼</b>、<b>真狼-狂狼</b>などもありますが、これらは確率が低めです。なぜなら、この3つはいずれの場合も何らかの<strong>欠け</strong>が起こっているからです。欠けとは、<b>初日犠牲者</b>（替身君）に何らか的职业（村人以外）が割り当てられることです。この場合2日目昼の時点で死んでいるので、全员がCOし終わっても本物がいないということが起こり得ます。1つ目は狂人がCOしていないので狂人欠け、2つ目は真占卜师がいないので占卜师欠け、3つ目は灵能者欠けです。
       p また、それほど多い人数になると、<strong>妖狐</strong>が騙っている可能性も考慮せねばならず、パターンは多くなります。
       p 白進行ならば、この場合は主に2つの選択肢があります。一つは<strong>グレラン</strong>で、もう一つは<strong>灵能ローラー</strong>です。
-      p グレランは、グレー（占卜师から白をもらっていないし、何もCOしていない人）の中から適当に1人処刑することです。
-      p グレランの利点は<b>灵能者</b>を生かしておいて反応を見ることができる（灵能者視点で狼が残り何匹かを知ることができる）点などです。逆にデメリットは、2人いる灵能者を放置しておくと最終的に処刑してしまう機会がなくなり灵能者を騙る狼が生き残ってしまう可能性が大きいことや、序盤からグレランするとまだ占卜师の情報が少なくてグレーの幅が広いため狼が吊れにくい点などです。
-      p それに対し灵能ローラー（<b>霊ロラ</b>と略されることも）は、複数いる灵能者を全員順番に処刑してしまうことです。
-      p メリットは、灵能者の中に混ざっている<b>人外</b>（村人阵营以外。狂人を含むのが一般的）を、本物もろとも確実に処刑できる点です。また、グレランとは逆にグレーの処刑が先延ばしにされるため、ローラーの間に占卜师が黒判定を出したり、あるいは白判定を出すことによってグレーの数が減り、グレランによって人狼を処刑できる可能性が高まることもあります。
-      p デメリットは、灵能者の内訳が真狂だった場合、人狼を1人も処刑でいないまま吊り回数2回を消費してしまうことです。
+      p グレランは、グレー（占卜师から白をもらっていないし、何もCOしていない人）の中から適当に1人处刑することです。
+      p グレランの利点は<b>灵能者</b>を生かしておいて反応を見ることができる（灵能者視点で狼が残り何匹かを知ることができる）点などです。逆にデメリットは、2人いる灵能者を放置しておくと最終的に处刑してしまう機会がなくなり灵能者を騙る狼が生き残ってしまう可能性が大きいことや、序盤からグレランするとまだ占卜师の情報が少なくてグレーの幅が広いため狼が吊れにくい点などです。
+      p それに対し灵能ローラー（<b>霊ロラ</b>と略されることも）は、複数いる灵能者を全员順番に处刑してしまうことです。
+      p メリットは、灵能者の中に混ざっている<b>人外</b>（村人阵营以外。狂人を含むのが一般的）を、本物もろとも確実に处刑できる点です。また、グレランとは逆にグレーの处刑が先延ばしにされるため、ローラーの間に占卜师が黒判定を出したり、あるいは白判定を出すことによってグレーの数が減り、グレランによって人狼を处刑できる可能性が高まることもあります。
+      p デメリットは、灵能者の内訳が真狂だった場合、人狼を1人も处刑でいないまま吊り回数2回を消費してしまうことです。
       p 2-2においては、特に灵能ローラーした場合は、占卜师の真贋が判断しがたく、决定的な証拠のない中で占卜师の<strong>信用勝負</strong>になりがちです。信用勝負とは、言動やCOのタイミングなどから、どちらの占卜师がより信用できるか
 
       section
         h4 灵能ローラーの中断について
-        p 灵能ローラーは灵能者を複数日かけて全員処刑することですが、その間に占卜师が黒判定を出した場合、その黒を出された人を先に吊ってみる場合と、灵能ローラーが終わるまで後回しにする場合があります。
+        p 灵能ローラーは灵能者を複数日かけて全员处刑することですが、その間に占卜师が黒判定を出した場合、その黒を出された人を先に吊ってみる場合と、灵能ローラーが終わるまで後回しにする場合があります。
         p 灵能ローラーを終えたあとは、黒を出された人を吊っても本当に人狼だったかどうかは分かりません。先に黒を吊れば、灵能者のうち片方とはいえラインを見ることができます。
         p しかし、まだ生きている灵能者が狼であり、生き残るためにラインを繋いだとも考えられるので（占卜师が本物か偽物かにかかわらず）、あまり参考にはならないことでしょう。
     section
       h3 2-1
       p <b>2-1</b>とは、占卜师が2人、灵能者は1人COした形です。
       p オーソドックスな内訳は<b>真狂-真</b>です。他に考えられるのは<b>真狼-真</b>とかです。
-      p 灵能者が1人しかいない場合、<strong>灵能欠け</strong>が視野に入ってきます。すなわち、<b>真狂-狼</b>などというように、1人出た灵能者が真灵能ではないという場合です。ですから、灵能者が1人しかいないとはいえ、処刑する必要性も見えてきます。
+      p 灵能者が1人しかいない場合、<strong>灵能欠け</strong>が視野に入ってきます。すなわち、<b>真狂-狼</b>などというように、1人出た灵能者が真灵能ではないという場合です。ですから、灵能者が1人しかいないとはいえ、处刑する必要性も見えてきます。
       p また人狼が多ければ、その分2-1という形は珍しくなってきますが、<b>真狼-狼</b>とかそういう形が見られるかもしれません。
       p しかしやはり一番ありえるのは<b>真狂-真</b>であり、これを「真狂-真本線」などと言ったりします。
       p ポイントは、占卜师が黒判定を出したときに灵能者がどちらの占卜师とラインを繋ぐかです。真狂-真ならばラインが繋がったペアが真どうしで、あまった占卜师が狂人であると見ることができ、村人有利になります。
     section
       h3 3-2
       p <b>3-2</b>の場合は、<b>真狂狼-真狼</b>という可能性が高いでしょう。
-      p 人狼が2人ならば、役職が5人出た時点で人狼の全露出（人狼が全員騙りに出ていること）が確定なので、<b>グレー</b>の中に人狼がいる可能性はなくなりますなら、あとは占いローラー及び灵能ローラーで人狼を駆逐できます。
-      p ただし、吊り回数が4回だったりすると、全員を処刑できませんが、それでも村人侧の勝率は高いです。また例えば先に灵能ローラーをして占卜师に互いに占わせるなどすると人狼が見えてくる場合もあるかもしれません。
+      p 人狼が2人ならば、职业が5人出た時点で人狼の全露出（人狼が全员騙りに出ていること）が確定なので、<b>グレー</b>の中に人狼がいる可能性はなくなりますなら、あとは占いローラー及び灵能ローラーで人狼を駆逐できます。
+      p ただし、吊り回数が4回だったりすると、全员を处刑できませんが、それでも村人侧の勝率は高いです。また例えば先に灵能ローラーをして占卜师に互いに占わせるなどすると人狼が見えてくる場合もあるかもしれません。
 
       hr
       p それに対して人狼が3人ならば、この形もありえます。ただし、どこかに狐が混ざっている可能性もあります。
-      p この形は複雑な形ですが、まず考えられるのは、2-2と同様にグレランか灵能ローラーでしょう。ただし3-2の場合、灵能ローラーのほうが一般的です。というのも、人狼は人狼に対して票を入れませんから（人狼が吊られる可能性が低いときは、あえて人狼が人狼に対して投票してのちのち自身の信頼を高める<strong>偽装投票</strong>を行う戦術もありますが）、人狼が3人残っている場合は最低3票は人狼以外へ投じられることになりますから、特に人狼があらかじめ投票先を相談していたりすると（さすがに3人が同じところへ投票するのはわざとらしいので2人が一致とか）、人狼が吊れる可能性が低いのです。
+      p この形は複雑な形ですが、まず考えられるのは、2-2と同样にグレランか灵能ローラーでしょう。ただし3-2の場合、灵能ローラーのほうが一般的です。というのも、人狼は人狼に対して票を入れませんから（人狼が吊られる可能性が低いときは、あえて人狼が人狼に対して投票してのちのち自身の信頼を高める<strong>偽装投票</strong>を行う戦術もありますが）、人狼が3人残っている場合は最低3票は人狼以外へ投じられることになりますから、特に人狼があらかじめ投票先を相談していたりすると（さすがに3人が同じところへ投票するのはわざとらしいので2人が一致とか）、人狼が吊れる可能性が低いのです。
       p そこで、まずは灵能ローラーで人狼を2人に減らすのが有利になることが多いと見られます。
       p その後は占卜师を<strong>決め打ち</strong>（信用度の高い占卜师を真占卜师とみなしてその结果を信じること）する場合やあるいはさらに<strong>占いローラー</strong>で人狼を残り1人（狐が混ざっていたら人狼が残り2人もいるので厳しくなりますが）にする場合などがあります。
     section
@@ -104,7 +104,7 @@ section.manual.long
       p 狂人による囲いが起こった場合、人狼からみて誰が狂人であるか判明し、必然的に誰が真占いであるかも分かります（ただし狐がいる場合は狐による囲いも考えられます）。
       p ですから、たとえば占卜师が噛まれた場合、人狼からみて占卜师の真贋がはっきりしたので、噛まれたほうが真占卜师であり、残っているほうが偽物なのではないかという疑惑が生じます。
       p その場合に、「なぜ真贋がついたのか」について考えるとき、「狂人が人狼を囲ったから」ということが見えてきます。
-      p もっとも、人狼側はそれを逆手にとって、占卜师が真狂ならば、占卜师の真贋がつかないうちから占卜师のどちらかを噛んでしまい、残りの占卜师の信用も無くすという戦術をとることもありえるかもしれません。
+      p もっとも、人狼侧はそれを逆手にとって、占卜师が真狂ならば、占卜师の真贋がつかないうちから占卜师のどちらかを噛んでしまい、残りの占卜师の信用も無くすという戦術をとることもありえるかもしれません。
       hr
       p 以上は狂人による囲いの話でしたが、人狼による囲いの場合は話が違ってきます。
       p この場合、囲いを怪しまれないようにしないといけません。また、占卜师は最終的には人狼に噛まれることが多いため、最後まで生き残ることは珍しいので、人狼である偽占卜师が最後まで残っていると人狼であると疑われ、連鎖的に囲い先も疑われることもあります。とはいえ、そのころになれば占い先も増え、囲われている人狼の候補も多いためうまくやれば人狼が勝つこともできるでしょう。
