--- a/manual/changelog.jade
+++ b/manual/changelog.jade
@@ -9,10 +9,10 @@ section.manual
     li.change 冒涜者の出現人数が闇鍋セーフティ低以上で調整されるようになりました。(9a61dc8)
   h2 v1.10.4(9a61dc8;2015-08-26)
   ul
-    li.change 冒涜者が一部の役職を冒涜した場合に、冒涜相手ではなく自分が狐憑きとなるように変更しました。(0578740)
+    li.change 冒涜者が一部の职业を冒涜した場合に、冒涜相手ではなく自己が狐憑きとなるように変更しました。(0578740)
   h2 v1.10.2(08775a1;2015-07-21)
   ul
-    li.new 新役職「亵渎者」「丑刻参」を追加しました。(50cc506)
+    li.new 新职业「亵渎者」「丑刻参」を追加しました。(50cc506)
     li.change 黑暗火锅のとき、替身君が求爱者になれるように変更しました。また、替身君が求爱者になった場合求愛しないように変更しました。また、2日目以降に求爱者に変化した場合求愛できるように変更しました。(50cc506)
   h2 v1.10.1-9(2015-07-01)
   ul
@@ -30,7 +30,7 @@ section.manual
     li.bugfix 人狼系・吸血鬼・妖狐が陷阱师に护卫されたまたは炸弹魔に爆弾を仕掛けられた状态で人狼に襲撃された場合、陷阱师・炸弹魔の効果が発動しないバグを修正しました。(5c0066a)
   h2 v1.10.1-5(2b2f974;2015-03-21)
   ul
-    li.bugfix 替身君が决定者などのサブ役職を持った状态で模仿者になり模仿者を模仿者した場合、ゲームが停止するバグを修正しました。(932ba98)
+    li.bugfix 替身君が决定者などのサブ职业を持った状态で模仿者になり模仿者を模仿者した場合、游戏が停止するバグを修正しました。(932ba98)
     li.bugfix Endless黑暗火锅に途中参加する場合、参加前の昼に参加者と同じログで发言できるバグを修正しました。(97b4c9e)
   h2 v1.10.1-4(2015-03-19)
   ul
@@ -42,38 +42,38 @@ section.manual
   ul
     li.change Endless黑暗火锅に途中参加する場合、部屋の人数の上限に達していても强行退出の人がいる場合はその枠に入れるようになりました。(ead3f31)
     li.bugfix Endless黑暗火锅に途中参加した場合头像が表示されないバグを修正しました。(ead3f31)
-    li.new 昼間の背景色は評判が悪かったため戻りました。マイページの「色設定」からゲーム画面の色を自由に設定できるようになりました。(eea8ea8)
+    li.new 昼間の背景色は評判が悪かったため戻りました。マイページの「色設定」から游戏画面の色を自由に設定できるようになりました。(eea8ea8)
     li.new 强行退出を行なった場合ログが出るようにしました（本人と灵界に対して表示）。(4cd711a)
   h2 v1.10.1-1(02a9244;2015-01-31)
   ul
-    li.bugfix Endless黑暗火锅で転生人数が多すぎるとゲームが停止するバグを修正しました。(943580d)
+    li.bugfix Endless黑暗火锅で転生人数が多すぎると游戏が停止するバグを修正しました。(943580d)
   h2 v1.10.1(e157944;2015-01-31)
   ul
     li.bugfix Endless黑暗火锅で配役・出現阵营情報が表示されないバグを修正しました。(aa1c03b)
-    li.bugfix Endless黑暗火锅で途中参加した人が参加尚未分配の間に发言した場合、ログが全員に見えていたのを观战者にしか見えないように修正しました。(0df7afb)
+    li.bugfix Endless黑暗火锅で途中参加した人が参加尚未分配の間に发言した場合、ログが全员に見えていたのを观战者にしか見えないように修正しました。(0df7afb)
     li.new 「强行退出」機能を追加しました。蘇生を辞退すると死亡した後に蘇生されません。また、突然死した場合は自動的に强行退出となります。(6021481)
     li.change 昼間の背景色を変更しました。(d98b6b4)
     li.change Endless黑暗火锅の転生確率を調整しました。(af0f287)
   h2 v1.10.0(8d4b46c;2015-01-30)
   ul
     li.bugfix 替身君が国王の場合投票が2票分にならないバグを修正しました。(c47b058)
-    li.bugfix 二重身等が変化した場合役職名の表示がおかしくなることがあるバグを修正しました。(42215b6)
+    li.bugfix 二重身等が変化した場合职业名の表示がおかしくなることがあるバグを修正しました。(42215b6)
     li.bugfix 替身君が人狼系で他の生存している人狼系が全て孤独的狼の場合、替身君が襲撃せずに突然死するバグを修正しました。(da1492f)
     li.change 孤独的狼が襲撃可能になった後に他の人狼系が襲撃可能な状态になった場合、孤独的狼は襲撃不可能に戻るようになりました。(da1492f)
-    li.new 新配役「Endless黑暗火锅」を追加しました。主にゲーム性がまだα版です。(232f155)
+    li.new 新配役「Endless黑暗火锅」を追加しました。主に游戏性がまだα版です。(232f155)
   h2 v1.9.10-1(79c9b96;2015-01-01)
   ul
-    li.bugfix 同じ人に複数の炸弹魔が爆弾を仕掛けてその人が処刑により死亡した場合、1人しか道連れにしないバグを修正しました。(f0ba0d5)
+    li.bugfix 同じ人に複数の炸弹魔が爆弾を仕掛けてその人が处刑により死亡した場合、1人しか道連れにしないバグを修正しました。(f0ba0d5)
     li.bugfix 「女王观战者」の名称が出典と異なっていたため、「女王感戦者」に変更しました。(ce519fd)
-    li.bugfix 怪盗が决定者・权力者になった場合にゲームが停止するバグを修正しました。(a0e8386)
+    li.bugfix 怪盗が决定者・权力者になった場合に游戏が停止するバグを修正しました。(a0e8386)
   h2 v1.9.10(4cfde47;2014-12-24)
   ul
-    li.new 新役職「炸弹魔」を追加しました。(0727296)
+    li.new 新职业「炸弹魔」を追加しました。(0727296)
     li.bugfix 弗兰肯斯坦が面包店を吸収しても面包店として扱われないバグを修正しました。(46da76d)
     li.bugfix 面包店が死亡した後蘇生して再度死亡した場合にそれを知らせるログが出現しないバグを修正しました。(5d42c01)
   h2 v1.9.9-3(a0224b5;2014-12-20)
   ul
-    li.bugfix 妖术师が何らかのサブ役職（猎人の护卫・カルトなど）を持った状态で人狼占卜师に占われた場合にゲーム進行が停止するバグを修正しました。(49e4e99)
+    li.bugfix 妖术师が何らかのサブ职业（猎人の护卫・カルトなど）を持った状态で人狼占卜师に占われた場合に游戏進行が停止するバグを修正しました。(49e4e99)
     li.bugfix 襲撃可能な人狼が替身君しかいない状态で、狼之子の効果により2人以上襲撃可能な状态でも替身君が1人しか不袭击バグを修正しました。(366828b)
     li.bugfix 替身君が妖术师になった場合に夜的职业実行を2回行うバグを修正しました。(9c4f98e)
     li.bugfix 骗子が猎人・風来猎人・犬の护卫を受けている場合に占卜结果が表示されないことがあるバグを修正しました。(5d00239)
@@ -86,7 +86,7 @@ section.manual
 
   h2 v1.9.9(fd5a544;2014-08-29)
   ul
-    li.new 新役職「面包店」を追加しました。(3e65016)
+    li.new 新职业「面包店」を追加しました。(3e65016)
     li.bugfix 碍事的狂人に邪魔された場合の占卜结果のログが正しくないバグを修正しました。(0776baa)
   h2 v1.9.8-2(7610870;2014-08-24)
   ul
@@ -99,7 +99,7 @@ section.manual
     li.bugfix 3日目以降に怪诞狂热者が能力を使用できないバグを修正しました。(37e93ee)
   h2 v1.9.8(d77098a;2014-07-26)
   ul
-    li.new 期間限定役職「烟火师」を追加しました。(1b67df5)
+    li.new 期間限定职业「烟火师」を追加しました。(1b67df5)
   h2 v1.9.7-7(2162d20;2014-07-20)
   ul
     li.change 配役「疯狂的世界」の内訳を変更しました。(23ad317)
@@ -111,41 +111,41 @@ section.manual
   h2 v1.9.7-5(b64ac5c;2014-07-13)
   ul
     li.bugfix 替身君が吸血鬼になった場合サーバーが停止するバグを修正しました。(877c010)
-    li.bugfix 替身君に恋人等のサブ役職が付加された場合突然死することがあるバグを修正しました。(8264297)
+    li.bugfix 替身君に恋人等のサブ职业が付加された場合突然死することがあるバグを修正しました。(8264297)
     li.change 配役「疯狂的世界」の内訳を変更しました。(83b0238)
   h2 v1.9.7-4
   ul
-    li.change 怪盗に役職を盗まれた場合、恋人などのサブ役職が消滅するように変更しました。(ff607ba)
+    li.change 怪盗に职业を盗まれた場合、恋人などのサブ职业が消滅するように変更しました。(ff607ba)
   h2 v1.9.7-3(0b73490;2014-06-23)
   ul
-    li.bugfix 2人以上処刑する場合、1人目の処刑後に風来猎人がもう护卫できなくなるバグを修正しました。(0ead889)
+    li.bugfix 2人以上处刑する場合、1人目の处刑後に風来猎人がもう护卫できなくなるバグを修正しました。(0ead889)
     li.bugfix 独裁者が变态杀人狂を能力の対象に選んでも死亡しないバグを修正しました。(ef7190b)
     li.bugfix 狂人系が人狼占卜师により帮手に変化した場合に发言や投票ができなくなるバグを修正しました。(670ba4e)
 
   h2 v1.9.7-2(b556a59;2014-05-25)
   ul
     li.bugfix 恋人が複数組存在して設定「恋人はそれぞれ独立する」がありの場合、恋人胜利のメッセージの人数が間違っているバグを修正しました。(b4377c2)
-    li.change 恋人が複数組生存していて設定「恋人はそれぞれ独立する」がありの場合、生存者が全員恋人の場合は恋人胜利で终了するように修正しました。(b4377c2)
+    li.change 恋人が複数組生存していて設定「恋人はそれぞれ独立する」がありの場合、生存者が全员恋人の場合は恋人胜利で终了するように修正しました。(b4377c2)
   h2 v1.9.7-1(0901f21;2014-04-28)
   ul 
     li.bugfix 替身君が人狼占卜师・威吓的狼になった場合突然死するバグを修正しました。(f8fa062)
     li.bugfix 替身君が陷阱师・吸血鬼になった場合突然死することがあるバグを修正しました。(dedaa5f)
-    li.bugfix 替身君が狼少年になった場合、各役職が正常に動作しないことがあるバグを修正しました。(fde4998)
-    li.bugfix 死亡すると同時に役職が変化した場合、死亡しなかったことになることがあるバグを修正しました。(4d9a29c)
+    li.bugfix 替身君が狼少年になった場合、各职业が正常に動作しないことがあるバグを修正しました。(fde4998)
+    li.bugfix 死亡すると同時に职业が変化した場合、死亡しなかったことになることがあるバグを修正しました。(4d9a29c)
     li.change 「黑暗火锅安全性」の「超（β）」が「超（β2）」になりました。(0663da5)
     li.change 商人が1日目の夜に能力を使用できないように変更しました（出典元に合わせた修正）。(d3f50b5)
     li.new 「黑暗火锅安全性」に「走召（α）」を追加しました。超とどちらが上なのかよくわかりません。(3ddea03)
     li.new 帮手時に帮手先に表示されている各種情報（仲間の狼・女王观战者など）が帮手にも表示されるようになりました。(e2150e6)
   h2 v1.9.7(a789679;2014-03-11)
   ul
-    li.new 新役職「看板娘」「慎重的狼」を追加しました。(7efc238)
+    li.new 新职业「看板娘」「慎重的狼」を追加しました。(7efc238)
     li.bugfix 死亡している变态杀人狂に能力を使用しても能力使用者が死亡しないバグを修正しました。(3ca6def)
   h2 v1.9.6-3(7a06ceb;2014-03-08)
   ul
-    li.bugfix 弗兰肯斯坦が蘇生能力を持つ役職を吸収した場合、弗兰肯斯坦がまだ生存していても灵界で参加者的职业が見えてしまうことがあるバグを修正しました。(ee02cf1)
+    li.bugfix 弗兰肯斯坦が蘇生能力を持つ职业を吸収した場合、弗兰肯斯坦がまだ生存していても灵界で参加者的职业が見えてしまうことがあるバグを修正しました。(ee02cf1)
   h2 v1.9.6-2(f092a00;2014-03-02)
   ul
-    li.bugfix 模仿者・二重身などが役職変化した際に、恋人などのサブ役職が解除されるバグを修正しました。(63285da)
+    li.bugfix 模仿者・二重身などが职业変化した際に、恋人などのサブ职业が解除されるバグを修正しました。(63285da)
   h2 v1.9.6-1(23c9708;2014-02-21)
   ul
     li.bugfix 策士が一匹狼をカウンセリングしても死なずに更生するバグを修正しました。(1e33174)
@@ -154,12 +154,12 @@ section.manual
     li.change 诅咒师の効果を初日の夜には発動できないように修正しました。(6affba3)
     li.bugfix 孤独的狼が襲撃可能になったときに襲撃ログが表示されない問題を修正しました。(284a7b0)
     li.bugfix 人狼占卜师が狂人系を占ったときにログが正しく表示されないバグを修正しました。(cec9ab4)
-    li.bugfix 2回以上恋人・手玉になったときに恋人が全員表示されないバグを修正しました。(0d8b7be) 
+    li.bugfix 2回以上恋人・手玉になったときに恋人が全员表示されないバグを修正しました。(0d8b7be) 
 
   h2 v1.9.6(8665618;2014-02-07)
   ul
     li.bugfix 替身君が犬になったときに突然死することがあるバグを修正しました。(338bbb2)
-    li.new 新役職「恶女」を追加しました。(3d49e4f)
+    li.new 新职业「恶女」を追加しました。(3d49e4f)
   h2 v1.9.5-4(f6221d2;2014-02-07)
   ul
     li.bugfix 逃亡者が一匹狼に逃げても死亡しないバグを修正しました。(97fb376)
@@ -172,10 +172,10 @@ section.manual
   h2 v1.9.5-1
   ul
     li.bugfix 小狐・妖术师が妖狐を占った場合呪殺してしまうバグを修正しました。(457e1d9)
-    li.change 犬は自分を飼い主にできないように修正しました。(457e1d9)
+    li.change 犬は自己を飼い主にできないように修正しました。(457e1d9)
   h2 v1.9.5(02620ce;2014-01-26)
   ul
-    li.new 新役職「怪盗」を追加しました。(98e61cb)
+    li.new 新职业「怪盗」を追加しました。(98e61cb)
   h2 v1.9.4-9(2014-01-26)
   ul
     li.bugfix 恋人が死亡しているのに恋人胜利で终了することがあるバグを修正しました。(7420b28)
@@ -195,7 +195,7 @@ section.manual
     li.change <a href="/manual/prohibited">禁止行為</a>が一部修正されました。(6697783)
   h2 v1.9.4-5(4c7da28;2014-01-19)
   ul
-    li.bugfix 陷阱师に守られていた人が死んだ場合ゲーム進行が停止することがあるバグを修正しました。(231d692)
+    li.bugfix 陷阱师に守られていた人が死んだ場合游戏進行が停止することがあるバグを修正しました。(231d692)
     li.new <a href="/manual/prohibited">禁止行為</a>が定められました。(dbf105a)
   h2 v1.9.4-4(4e0204f;2014-01-02)
   ul
@@ -206,43 +206,43 @@ section.manual
     li.change 「规则」ボタンの表示を改良しました。(e78946f)
   h2 v1.9.4-2(8d59445;2013-12-29)
   ul
-    li.bugfix 夜の能力発動で死んだ役職の能力が発動しないことがあるバグを修正しました。(51743dc)
+    li.bugfix 夜の能力発動で死んだ职业の能力が発動しないことがあるバグを修正しました。(51743dc)
   h2 v1.9.4-1(5104f87;2013-12-28)
   ul
     li.bugfix 占卜结果「立刻知道」で人狼占卜师が占卜师を占った場合、翌朝になる前に死亡するバグを修正しました。(38482c8)
     li.new 黑暗火锅安全性に「超(α)」を追加しました。「高」以上にバランスのいい配役を行いますが、まだ実験段階の機能となっています。(eff95e8)
   h2 v1.9.4(35a4f34;2013-12-24)
   ul
-    li.new 期間限定役職「圣诞老人」を追加しました。(e1a5f43)
+    li.new 期間限定职业「圣诞老人」を追加しました。(e1a5f43)
   h2 v1.9.3-1(920922f;2013-12-22)
   ul
     li.bugfix 魔女が蘇生薬・毒薬を使用した状況によって、次に薬を使用したときに違う種類の薬が使われることがあるバグを修正しました。(0be9aee)
     li.change 突然死した人は勝敗判定が常に「败北」になるように修正しました。(8d4c8c3)
   h2 v1.9.3(6a3b5d8;2013-12-17)
   ul
-    li.new 新役職「变态杀人狂」を追加しました。(aec741c)
+    li.new 新职业「变态杀人狂」を追加しました。(aec741c)
     li.change 「身代わり安全性」がありの場合、替身君が贵族・求爱者にならないように変更しました。(a285080)
     li.new 称号を120種類追加しました。(85e4e5f)
   h2 v1.9.2(0ab80dd;2013-12-16)
   ul
     li.new 「ミラーズホロウの人狼」から新しい选项「决胜投票」を追加しました。「なし」の場合は従来通りの動作です。「重新投票」にした場合は重新投票時に候補者が上位のみになります。「常に行う」にした場合は投票後に必ず上位の候補者のみの决胜投票が行われます。(7bbacc4)
-    li.new 新役職「国王」を追加しました。(0b5677b)
-    li.new 灵界で役職か見えるかどうかの选项名を「灵界表示」に変更し、選択肢を「あり」「なし」から「常にあり」・「あり」（デフォルト）・「なし」の3段階に変更しました。「あり」は誰かが蘇生する可能性がある場合のみ表示しません（ゲーム中でも、蘇生可能性が無くなった場合表示されるようになります）。「常にあり」では蘇生役職があっても役職などを表示します。また、これに伴って、黑暗火锅で蘇生役職が出現した場合に「蘇生役職が存在するため「蘇生役職が存在するので、天国から役職が見られなくなりました。」というメッセージは出現しないようになりました。(502222e)
+    li.new 新职业「国王」を追加しました。(0b5677b)
+    li.new 灵界で职业か見えるかどうかの选项名を「灵界表示」に変更し、選択肢を「あり」「なし」から「常にあり」・「あり」（デフォルト）・「なし」の3段階に変更しました。「あり」は誰かが蘇生する可能性がある場合のみ表示しません（游戏中でも、蘇生可能性が無くなった場合表示されるようになります）。「常にあり」では蘇生职业があっても职业などを表示します。また、これに伴って、黑暗火锅で蘇生职业が出現した場合に「蘇生职业が存在するため「蘇生职业が存在するので、天国から职业が見られなくなりました。」というメッセージは出現しないようになりました。(502222e)
   h2 v1.9.1-2(734377f;2013-12-15)
   ul
     li.bugfix 威吓的狼に威嚇された人が商品から荷物を受け取ったり圣职者に护卫されたり教会信者になったりした場合にその後ずっと能力が使用できなくなるバグを修正しました。(d8bfab2)
   h2 v1.9.1-1(bab1863;2013-12-07)
   ul
-    li.new 新役職「弗兰肯斯坦」を追加しました。(4e394d7)
+    li.new 新职业「弗兰肯斯坦」を追加しました。(4e394d7)
   h2 v1.9.1(9b53e31;2013-12-07)
   ul
-    li.new 新役職「碍事的狂人」を追加しました。(55586db) 
-    li.new 新役職「闹事者」を追加しました。(a57b4b5) 
-    li.bugfix 陷阱师に守られた役職の能力が発動しないことがあるバグを修正しました。(7843743)
+    li.new 新职业「碍事的狂人」を追加しました。(55586db) 
+    li.new 新职业「闹事者」を追加しました。(a57b4b5) 
+    li.bugfix 陷阱师に守られた职业の能力が発動しないことがあるバグを修正しました。(7843743)
     li.change 被诅咒者が吸血鬼に襲われた場合に吸血鬼に変化するように修正しました。(ba9112b)
   h2 v1.9.0(7ebfcdb;2013-12-03)
   ul
-    li.new 新役職「風来猎人」を追加しました。(44919bb)
+    li.new 新职业「風来猎人」を追加しました。(44919bb)
     li.bugfix 恋人・背德者などが後追いで死亡する場合で、2連鎖目以上の場合死亡しないことがあるバグを修正しました。(1b281e3)
     li.change 黑暗火锅安全性が中以上の場合に、配役の人狼の数がより安定するように修正しました。(2bfa2ec)
   h2 v1.8.9-2(389afc5;2013-11-30)
@@ -264,10 +264,10 @@ section.manual
     li.bugfix 诅咒师に呪いをかけられた人が、次の日になっても发言できないままになるバグを修正しました。(adf1e63)
     li.change 吸血鬼・死亡笔记・魔女が1日目の夜に能力を発動できないように修正しました。また、贪婪的狼が1人目の対象選択した後に欲張る能力を発動できないバグを修正しました。(f774e74,f609fdc)
     li.bugfix 人狼占卜师が商人から占卜套装を受け取った場合に、対象選択画面がわかりにくい問題を改善しました。(68b3d44)
-    li.change 黑暗火锅安全性中以上で、占卜师・猎人が出現する確率が上昇しました。さらに、狂人狼が出現する場合必ず狂人系役職も出現するようになりました。また、黑暗火锅安全性高以上で女王观战者が2人以上出現しないようになりました。(ca3411a)
+    li.change 黑暗火锅安全性中以上で、占卜师・猎人が出現する確率が上昇しました。さらに、狂人狼が出現する場合必ず狂人系职业も出現するようになりました。また、黑暗火锅安全性高以上で女王观战者が2人以上出現しないようになりました。(ca3411a)
     li.bugfix 硬汉人狼が能力を発動して圣职者に守られた人を襲った場合に、死なないままチャットが灵界に移動して昼に投票もできなくなるバグを修正しました。(86b6b9e)
     li.change 猎人・陷阱师が吸血鬼の襲撃を守れるように変更しました。陷阱师に护卫されている人を吸血鬼が襲った場合、その吸血鬼が死にます。(7325719)
-    li.change 吸血鬼が埋毒者・猫又を襲った場合の動作を、「全員からランダムに一人毒で死ぬ」から「その吸血鬼が毒で死ぬ」変更しました。(7325719)
+    li.change 吸血鬼が埋毒者・猫又を襲った場合の動作を、「全员からランダムに一人毒で死ぬ」から「その吸血鬼が毒で死ぬ」変更しました。(7325719)
     li.new 量子人狼に「死亡率を表示しない」选项を追加しました。(0e02ce2)
     li.new 称号に使用できる助詞「だ」「ぜ」「ん」を追加しました。(aee8e9f)
     li.new マイページの战绩展示で表示した详细情報を隠すことができるようになりました。(aee8e9f)
