--- a/manual/rule.jade
+++ b/manual/rule.jade
@@ -19,7 +19,7 @@ section.manual
   
   h2 游戏的进行
   p 游戏以<b>昼</b>与<b>夜</b>为单位进行。
-  p 游戏以<b>第一天夜里</b>一名村人被人狼<b>这一事件的发生</b>作为一场游戏的开端。
+  p 游戏以<b>第一天夜里</b>一名村人被人狼袭击<b>这一事件的发生</b>作为一场游戏的开端。
   
   p 在夜间，<b>人狼</b>能够相互对话，<b>能力者</b>（后述）能够发动能力。然后，夜间人狼们进行商议（人狼以外不能得知谈话的内容），袭杀一名村人（被杀的人将在第二天早上被发现）。
   p 经过了一定得时间之后，夜晚结束，变为<b>第二天白天</b>。
