--- a/client/views/app.jade
+++ b/client/views/app.jade
@@ -6,6 +6,7 @@ html(xmlns:wb="http://open.weibo.com/wb")
     meta(name="application-name",content="月下人狼")
     meta(name="description",content="一个实时的高自由度的人狼服务器。有70种以上的职业可供使用。")
     <meta property="wb:webmaster" content="429c879e40644052" />
+    <meta name="baidu-tc-verification" content="85f2a37978bcfa919b4270610f5f3e96" />
     <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=2598264088&debug=true" type="text/javascript" charset="utf-8"></script>
 
     != SocketStream
