translation fix RenHood

--- a/client/templates/jobs/RedHood.jade
+++ b/client/templates/jobs/RedHood.jade
@@ -3,7 +3,7 @@ section.jobmanual
   //- @MrAlludeが考案したとされる职业。
   p 村人侧。
   h2 特殊能力
-  p 被人狼袭击死亡之后，那个人狼将会死去，小红帽自己将会复活。
+  p 被人狼袭击死亡之后，小红帽将在那个人狼死后立刻复活。
   h2 胜利条件
   p 村人阵营的胜利
 
