sudden death punish
当一局游戏结束，向房间成员询问，根据成员提交的表单对猝死人员执行（60/人数）的封禁

--- a/client/templates/admin.jade
+++ b/client/templates/admin.jade
@@ -33,6 +33,8 @@ section.admin#admin
         | 月
         input(name="day",type="number",step="1",value="0",min="0")
         | 天
+        input(name="hour",type="number",step="1",value="0",min="0")
+        | 小时
       p
         input(type="submit",value="OK")
   section#grandalert(hidden)
