--- a/client/css/app.styl
+++ b/client/css/app.styl
@@ -11,8 +11,8 @@ body, html
 body
   font normal 1em sans-serif
   //vertical-gradient #eee, #fff
-  margin-left 20px
-  margin-right 0
+  margin-left 15px
+  margin-right 15px
 
 a
   color #000a68
@@ -61,7 +61,8 @@ input[type="number"]
 //header
 body > header
   text-align center
-  margin-left -20px
+  margin-left -15px
+  margin-right -15px
   padding 4px 0 4px 8px
   background-color #000000
   vertical-gradient #565656,#131313
