--- a/manual/rule.jade
+++ b/manual/rule.jade
@@ -85,4 +85,4 @@ section.manual
   p 「第一天夜里就被人狼杀死的人，只能干看着游戏发展实在是太可怜了」，替身君基于这种考虑为了在第一夜做替死鬼而诞生的。
   p 因此，替身君默认情况下是不能成为人狼或妖狐的（占卜师、灵能者、狂人等等人狼与妖狐以外的职业，替身君则可能出现，考虑到这一点进行推理是十分有必要的）。
   
-  p 规则的阅读到此结束，接下来请阅读<a href="/welcome.jade">人狼入门</a>加入游戏吧。
+  p 规则的阅读到此结束，接下来请阅读<a href="/manual/welcome">人狼入门</a>加入游戏吧。
